--- a/resources/languages/de.json
+++ b/resources/languages/de.json
@@ -6,23 +6,23 @@
     "helpMessageSendConfirmation": "Ich habe dir alle Befehle als Privatnachricht gesendet.",
     "missingPermissionOwnerMessage": "Hi! Ich bin ein Bot deines Servers  %s. \nIch brauche die  \"%s\"  Berechtigung im Infokanal um richtig zu funktionieren. Wenn du Hilfe brauchst kannst du dem Hilfeserver hier beitreten: %s\nDiese Nachricht wird jedes Mal gesendet wenn ich neustarte. Danke im Voraus !",
     "aboutCommandHelp": "Gibt die Infos über den Bot.",
-    "aboutMessage": "Hi, ich bin ein League of Legends Bot der von KaluNight#0001 in Java geschrieben wurde. Ich biete die Möglichkeit eine Informationstafel zu erstellen, das dir ermöglicht, direkt in einem Discord-Kanal zu erfahren, ob deine Freunde im Spiel sind, während du verschiedene Informationen über die aktuellen Spiele bekommst. Du kannst zu meiner Entwicklung auf meinem Github [hier](%s) beitragen.\nOffizieller Discord-Server %s\nUm mich zu deinem Server hinzuzufügen, klicke [hier](%s)!\n\n*Ich mag Schmetterlinge, Einhörner und das Beobachten des Endes der endlichen Realitäten !*\n\nZoe wird nicht von Riot Games unterstützt und spiegelt nicht die Ansichten oder Meinungen von Riot Games oder irgendjemandem wider, der offiziell an der Produktion oder Verwaltung von League of Legends beteiligt ist.",
+    "aboutMessage": "Hi, ich bin ein League of Legends Bot der von KaluNight#0001 in Java geschrieben wurde. Ich biete die Möglichkeit eine Informationstafel zu erstellen, das dir ermöglicht, direkt in einem Discord-Kanal zu erfahren, ob deine Freunde im Spiel sind, während du verschiedene Informationen über die aktuellen Spiele bekommst. Du kannst zu meiner Entwicklung auf meinem Github [hier](%s) beitragen.\nOffizieller Discord-Server %s\nUm mich zu deinem Server hinzuzufügen, klicke [hier](%s)!\n\n*Ich mag Schmetterlinge, Einhörner und das Beobachten des Endes der endlichen Realitäten !*\n\nYuumi wird nicht von Riot Games unterstützt und spiegelt nicht die Ansichten oder Meinungen von Riot Games oder irgendjemandem wider, der offiziell an der Produktion oder Verwaltung von League of Legends beteiligt ist.",
     "configCommandHelp": "Öffne eine interaktive Nachricht, um den Server zu konfigurieren.",
     "patchNotesCommandHelp": "Senden der Patch-Note der aktuellen Version (Patch-Notes sind auf Englisch).",
     "refreshCommandHelp": "Aktualisieren Sie die Infotafel des Servers manuell.",
     "resetCommandHelp": "Zurücksetzen der aktuellen Konfiguration des Servers.",
-    "resetWarningMessage": "**WARNUNG**: Dieser Befehl setzt die Konfiguration des Bots für diesen Server zurück ! Es werden keine Daten von Discord gelöscht (Zoe's Nachrichten und Textkanäle). Sind Sie sicher, dass Sie das tun wollen?\n\nWenn es wirklich das ist, was Sie tun wollen, antworten Sie : **JA**.",
+    "resetWarningMessage": "**WARNUNG**: Dieser Befehl setzt die Konfiguration des Bots für diesen Server zurück ! Es werden keine Daten von Discord gelöscht (Yuumi's Nachrichten und Textkanäle). Sind Sie sicher, dass Sie das tun wollen?\n\nWenn es wirklich das ist, was Sie tun wollen, antworten Sie : **JA**.",
     "resetConfirmationMessage": "Okay, los gehts ! Zurücksetzen...",
     "resetDoneMessage": "Erledigt, ich wurde korrekt zurückgesetzt.",
     "resetCancelMessage": "Ok, Ich mach nix.",
     "resetTimeoutMessage": "Ich warte hier nun schon seit über einer Minute. Länger werde ich nicht warten. Bitte sende den `>reset` erneut um mich zurückzusetzen.",
-    "setupHelpMessage": "Gibt Informationen darüber, wie Zoe eingerichtet werden kann.",
+    "setupHelpMessage": "Gibt Informationen darüber, wie Yuumi eingerichtet werden kann.",
     "setupMessage": "Hallo, du wirst sehen, meine Befehle sind wirklich nicht kompliziert. Zuallererst müssen Sie wissen , dass Sie alle meine Befehle mit Hilfe des Befehls `>help` sehen können. Geben Sie `>BefehlsName help` ein, um Hilfe zu einem bestimmten Befehl zu erhalten. Stellen Sie außerdem sicher, dass Sie die Kanalverwaltungs Berechtigung haben.\n\n1. Erstellen Sie zunächst einen InformationsKanal mit dem Befehl `>create infoChannel KanalName`. Sie können auch einen vorhandenen Kanal mit dem Befehl `>define infoChannel #Kanal` definieren.\n2. Fügen Sie dann die League of Legends-Spieler mit dem Befehl `>create player @DiscordName (ServerTag) (BeschwörerName)` zum System hinzu. Sie können einem Player mit dem Befehl \">add accountToPlayer @DiscordName (ServerTag) (BeschwörerName)\" ein sekundäres Konto hinzufügen.\n3. Mit dem Befehl `>config` können Sie Ihren Server wie gewünscht konfigurieren.\n\nDas war's, Ihr Informationssystem wurde gut implementiert. Wenn Sie Fragen oder Anfragen zu Funktionen haben oder einfach nur diskutieren möchten, kommen Sie bitte hierher: https://discord.gg/whc5PrC\n* Hinweis: Die InformationsTafel wird alle 5 Minuten aktualisiert. Infokarten werden in ca. 20 Sekunden gesendet. *",
     "addAccountHelpMessage": "Fügt den markierten Spieler dem gegebenen Account hinzu.",
     "permissionNeededMessage": "Dafür benötigst du die \"%s\" Berechtigung.",
     "mentionNeededMessageWithUser": "Bitte markiere einen Spieler auf dem Server (z.B. `>create player @%s (Region) (BeschwörerName)`)",
     "permissionNeededUpdateOtherPlayer": "Sie können einem anderen Spieler kein Konto hinzufügen, wenn Sie nicht über die Berechtigung zum Verwalten des Kanals verfügen. Tut mir leid :/",
-    "mentionnedUserNotRegistered": "Der erwähnte Benutzer ist nicht registriert. Bitte erstellen Sie ihn zuerst mit dem Befehl `>create player`.",
+    "mentionedUserNotRegistered": "Der erwähnte Benutzer ist nicht registriert. Bitte erstellen Sie ihn zuerst mit dem Befehl `>create player`.",
     "addCommandMalformedWithoutRegionOption": "Der Befehl ist fehlerhaft. Bitte beachten Sie dieses Muster: `>add %s @DiscordPlayerMention (Region) (BeschwörerName)`",
     "addCommandMalformedWithRegionOption": "Der Befehl ist fehlerhaft. Bitte beachten Sie dieses Muster: `>add %s @DiscordPlayerMention (Region) (BeschwörerName)`\nWenn die Region nicht festgelegt ist, wird die Standardregion verwendet (%s).",
     "regionTagInvalid": "Ungültige Region. (Gültige Regionen: EUW, EUNE, NA, BR, JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Fügen Sie den markierten Spieler dem angegebenen Team hinzu. Kanalverwaltungs Berechtigung erforderlich.",
     "mentionOfPlayerNeeded": "Bitte markiere einen registrierten Spieler !",
     "mentionOfUserNeedToBeAPlayer": "Der markierte Benutzer ist kein Spieler !",
-    "mentionnedPlayerIsAlreadyInATeam": "Der erwähnte Spieler hat bereits ein anderes Team (%s)!",
+    "mentionedPlayerIsAlreadyInATeam": "Der erwähnte Spieler hat bereits ein anderes Team (%s)!",
     "givenTeamNotExist": "Das gegebene Team existiert nicht! (Hinweis: Der Teamname muss in folgenden Format sein: `>add playerToTeam @MarkierterSpieler (TeamName)`)",
     "playerAddedInTheTeam": "Der Spieler wurde geaddet !",
     "createInfoChannelHelpMessage": "Erstellen Sie einen neuen InfoChannel, in dem ich Informationen über Spieler senden kann. Kanalverwaltungs Berechtigung erforderlich.",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "Das Team \"%s\" wurde erstellt !",
     "registerCommandHelpMessage": "Registrieren Sie den Autor als Spieler mit den angegebenen Informationen. Nur aktivieren, wenn die Option **Jeder kann sich selbst im System hinzufügen / löschen** aktiviert ist.",
     "registerCommandOptionRequired": "Dieser Befehl kann nur verwendet werden, wenn die Option \"%s\" aktiviert ist.",
-    "registerCommandAlreadyInZoe": "Sie sind bereits im System. Wenn Sie ein weiteres LOL-Konto hinzufügen möchten, verwenden Sie bitte den Befehl `>add account`.",
+    "registerCommandAlreadyInYuumi": "Sie sind bereits im System. Wenn Sie ein weiteres LOL-Konto hinzufügen möchten, verwenden Sie bitte den Befehl `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "Der Befehl ist fehlerhaft. Bitte beachten Sie dieses Muster: `>register (Region) (BeschwörerName)`",
     "registerCommandMalformedWithRegionOption": "Der Befehl ist fehlerhaft. Bitte beachten Sie dieses Muster: `>register (Region) (BeschwörerName)`\nWenn die Region nicht festgelegt ist, wird die Standardregion verwendet (%s).",
     "registerCommandDoneMessage": "Du wurdest mit dem Account \"%s\" hinzugefügt.",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "Ich habe keinen registrierten Infokanal! Ich kann etwas, das nicht existiert, nicht undefinieren :p",
     "undefineInfoChannelDoneMessage": "Ich habe den Infokanal undefiniert! Ich habe alle Nachrichten die ich geschrieben habe gelöscht.",
     "deleteInfoChannelHelpMessage": "Löschen Sie den InfoKanal nach der Aktualisierung. Kanalverwaltungs Berechtigung benötigt.",
-    "deleteInfoChannelChannelNotSetted": "Der Infokanal ist nicht definiert!",
+    "deleteInfoChannelChannelNotSet": "Der Infokanal ist nicht definiert!",
     "deleteInfoChannelDeletedMissingPermission": "Der Infokanal wurde gelöscht ** INSIDE THE SYSTEM **! Ich habe nicht die Erlaubnis, den Textkanal zu löschen!",
     "deleteInfoChannelDoneMessage": "Der Infokanal wurde gelöscht !",
     "deletePlayerHelpMessage": "Lösche den gegebenen Spieler",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "Das Konto \"%s\" wurde vom Spieler %s getrennt.",
     "removePlayerToTeamHelpMessage": "Löschen Sie den angegebenen Spieler aus seinem Team. Kanalverwaltungs Berechtigung erforderlich.",
     "removePlayerToTeamMissingMention": "Bitte markiere einen Nutzer !",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "Der markierte Nutzer ist kein registrierter Spieler !",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "Der markierte Nutzer ist kein registrierter Spieler !",
     "removePlayerToTeamNotInTheTeam": "Dieser Spieler ist in keinem Team.",
     "removePlayerToTeamDoneMessage": "%s wurde von dem team \"%s\" gelöscht !",
     "showPlayerHelpMessage": "Zeige alle Spieler mit ihren Accounts in diesen Server.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Meisterschaftspunkte",
     "cleanChannelOptionDisable": "Deaktivieren",
     "cleanChannelOptionDisableDesc": "Option deaktivieren",
-    "cleanChannelOptionZoeCommands": "Löschen Sie Zoe-Befehle",
-    "cleanChannelOptionZoeCommandsDesc": "Dadurch werden alle neuen Zoe-Befehle im Kanal gelöscht",
+    "cleanChannelOptionYuumiCommands": "Löschen Sie Yuumi-Befehle",
+    "cleanChannelOptionYuumiCommandsDesc": "Dadurch werden alle neuen Yuumi-Befehle im Kanal gelöscht",
     "cleanChannelOptionAll": "Löschen Sie alle Nachrichten",
     "cleanChannelOptionAllDesc": "Dadurch werden alle neuen Nachrichten gelöscht, die im Kanal gesendet werden",
     "cleanChannelOptionDesc": "Erstellen Sie einen sauberen Textkanal, in dem Nachrichten / Befehle automatisch gelöscht werden.",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "Die Option ist bereits deaktiviert!",
     "cleanChannelOptionNowDisable": "In Ordnung ! Die Option ist jetzt deaktiviert, ich werde keine Nachrichten mehr im sauberen Kanal löschen.",
     "cleanChannelOptionSendTextChannel": "Noch ein Schritt und uns geht es gut! Bitte senden Sie jetzt ** eine Nachricht mit der Erwähnung des Textkanals, den Sie definieren möchten **",
-    "cleanChannelOptionTopicChannelZoeCommands": "Alle hier gesendeten Zoe-Befehle werden nach 3 Sekunden gelöscht.",
+    "cleanChannelOptionTopicChannelYuumiCommands": "Alle hier gesendeten Yuumi-Befehle werden nach 3 Sekunden gelöscht.",
     "cleanChannelOptionTopicChannelAll": "Alle hier gesendeten Nachrichten werden nach 3 Sekunden gelöscht.",
     "cleanChannelOptionCreatedDoneMessage": "Perfekt ! Ich habe einen Kanal mit dem Namen \"Clean-Channel\" erstellt. Sie können die Optionen dieses Kanals nach Ihren Wünschen ändern. Lass mich rein und alles wird funktionieren.",
-    "cleanChannelOptionInfoMessageZoeCommands": "Info: Von nun an werden die hier gesendeten Zoe-Befehle nach 3 Sekunden gelöscht.",
+    "cleanChannelOptionInfoMessageYuumiCommands": "Info: Von nun an werden die hier gesendeten Yuumi-Befehle nach 3 Sekunden gelöscht.",
     "cleanChannelOptionInfoMessageAll": "Info: Von nun an werden alle hier gesendeten Nachrichten nach 3 Sekunden gelöscht.",
-    "cleanChannelOptionSettedDoneMessage": "Perfekt ! Der Kanal wurde korrekt eingestellt. Bitte überprüfen Sie einfach, ob ich alle erforderlichen Berechtigungen habe (Nachrichten verwalten, Lesen, Verlauf lesen).",
+    "cleanChannelOptionSetDoneMessage": "Perfekt ! Der Kanal wurde korrekt eingestellt. Bitte überprüfen Sie einfach, ob ich alle erforderlichen Berechtigungen habe (Nachrichten verwalten, Lesen, Verlauf lesen).",
     "cleanChannelOptionSelectInfoChannel": "Sie haben den Infokanal ausgewählt, diese Konfiguration kann nicht eingerichtet werden. Die Konfiguration wurde abgebrochen.",
     "cleanChannelOptionOneTextChannelRequired": "Sie haben keinen Textkanal erwähnt. Die Konfiguration wurde abgebrochen.",
     "cleanChannelOptionResponseTimeOut": "Die Wartezeit von 2 Minuten ist vorbei. Bitte wiederholen Sie den Befehl, wenn Sie diese Option einrichten möchten.",
@@ -164,8 +164,8 @@
     "regionOptionSelectionCanceledMessage": "Auswahl abgebrochen",
     "roleOptionDescription": "Verstecke den Infokanal für Nichtspieler mit einer Rolle",
     "roleOptionPermissionNeeded": "Ich benötige die Rollenverwaltungs Berechtigung, um diese Option zu aktivieren. Bitte geben Sie mir diese Erlaubnis, wenn Sie diese Option aktivieren möchten.",
-    "roleOptionLongDesc": "Option bei Aktivierung: **%s**\n\nWenn Sie diese Option aktivieren, wird eine Rolle mit dem Namen \"Zoe-Player\" erstellt und allen registrierten Spielern zugewiesen. Sie können es aktualisieren, wie Sie möchten. Wenn dieser gelöscht wird, wird die Option automatisch deaktiviert.\n\n:white_check_mark: : Aktivieren Sie diese Option\n:x: : Abbrechen der Aktivierung",
-    "roleOptionLongDescDisable": "Option, die Sie deaktivieren möchten: **%s**\n\nDurch Deaktivieren wird **die Zoe-Player Rolle gelöscht** und der InfoKanal wird für alle lesbar.\n\n:white_check_mark: : **Deaktiviere** die Option.\n:x: : Deaktivieren Sie die Deaktivierung.",
+    "roleOptionLongDesc": "Option bei Aktivierung: **%s**\n\nWenn Sie diese Option aktivieren, wird eine Rolle mit dem Namen \"Yuumi-Player\" erstellt und allen registrierten Spielern zugewiesen. Sie können es aktualisieren, wie Sie möchten. Wenn dieser gelöscht wird, wird die Option automatisch deaktiviert.\n\n:white_check_mark: : Aktivieren Sie diese Option\n:x: : Abbrechen der Aktivierung",
+    "roleOptionLongDescDisable": "Option, die Sie deaktivieren möchten: **%s**\n\nDurch Deaktivieren wird **die Yuumi-Player Rolle gelöscht** und der InfoKanal wird für alle lesbar.\n\n:white_check_mark: : **Deaktiviere** die Option.\n:x: : Deaktivieren Sie die Deaktivierung.",
     "roleOptionActivateWaitMessage": "OK, ich werde das schnell aktivieren. Warten Sie 2 Sekunden ...",
     "roleOptionDoneMessage": "Die Konfiguration ist beendet! Jetzt können nur registrierte Spieler den InfoKanal sehen.",
     "roleOptionCancelMessage": "Wenn du eines Tages deine Meinung geändert hast, weißt du ja wo ich bin.",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "Temporärer Modus",
     "blueTeam": "Blaues Team",
     "redTeam": "Rotes Team",
-    "masteriesWrTitleRespectSize": "Meisterschaften | Winrate in diesem Monat",
+    "masteryWrTitleRespectSize": "Meisterschaften | Winrate in diesem Monat",
     "soloqTitleRespectSize": "Solo/Duo Warteschlange Rang",
     "infoCardsGameInfoTitle": "Info des Spieles von",
     "infoCardsGameFooter": "Aktuelle Spieldauer",
@@ -250,7 +250,7 @@
     "2HoursAgo": "Vor 2 Stunden",
     "1HourAgo": "Vor 1 Stunde",
     "30MinutesAgo": "Vor 30 Minuten",
-    "fewsMinutesAgo": "Vor einpaar Minuten",
+    "fewMinutesAgo": "Vor einpaar Minuten",
     "infoCardsGameInfoOnTheGameOf": "Info des Spieles von",
     "infoCardsGameInfoAndOf": "und von",
     "account": "Konto",
@@ -259,7 +259,7 @@
     "addingSystemLanguageSelected": "OK, ich werde jetzt %s sprechen. (Sie können meine Sprache jederzeit mit dem Befehl `>l` ändern). Wählen wir nun eine Standardregion für den Server aus:",
     "rankChannelAlreadyExist": "Der RangKanal existiert bereits!",
     "addingSystemEndMessage": "Die Grundkonfiguration ist nun abgeschlossen. Ich hoffe, Sie werden meine Dienste genießen :D",
-    "languageCommandHelp": "Befehl zur Auswahl der Sprache von Zoe",
+    "languageCommandHelp": "Befehl zur Auswahl der Sprache von Yuumi",
     "errorSQLPleaseReport": "Ich habe ein Problem mit der Datenbank. Bitte melden Sie dieses Problem hier: https://discord.gg/YZwBvAx",
     "deleteRankChannelDoneMessage": "Der RangKanal wurde korrekt gelöscht.",
     "defineRankChannelHelpMessage": "Definieren Sie den RangKanal. Kanalverwaltungs Berechtigung erforderlich.",
@@ -294,7 +294,7 @@
     "nameUseIllegalCharacter": "Sie können diesen Namen nicht verwenden! Sie können keine Formatierungszeichen verwenden.",
     "rankChannelCorrectlyCreated": "Der RangKanal wurde korrekt erstellt!",
     "deleteRankChannelHelpMessage": "Löschen Sie den RangKanal. Kanalverwaltungs Berechtigung erforderlich.",
-    "deleteRankChannelNotSetted": "Der RangKanal ist nicht definiert!",
+    "deleteRankChannelNotSet": "Der RangKanal ist nicht definiert!",
     "deleteRankChannelDeletedMissingPermission": "Der RangKanal wurde nur **innerhalb des Systems** gelöscht! Ich habe nicht das Recht, den Textkanal zu löschen!",
     "defineRankChannelImpossibleToDefineCleanChannel": "Ich kann den RangKanal im sauberen Kanal nicht definieren (-> siehe Konfigurationsoption \"Clean Channel\").",
     "languageCommandInSelectionMenu": "Ausgewählte Sprache: **%s**",
@@ -353,7 +353,7 @@
     "leaderboardSuccessfullyCreated": "Die Rangliste wurde erfolgreich erstellt! Ich werde es stündlich aktualisieren.",
     "leaderboardMissingPermission": "Ich habe nicht alle erforderlichen Berechtigungen! Bitte geben Sie mir das Recht, Kanäle, Emotes und die Nutzung externer Links zu verwalten.",
     "leaderboardObjectiveBaseMessage": "**Rangliste lädt...**",
-    "createLeaderboardNeedOneMentionnedChannel": "Bitte senden Sie mir die Erwähnung des Kanals, in dem Sie die Rangliste haben möchten (d.h. ``#Ranglisten-Kanal``). Wenn Sie die Erstellung der Rangliste abbrechen wollen, senden Sie mir bitte ``Stop``.",
+    "createLeaderboardNeedOneMentionedChannel": "Bitte senden Sie mir die Erwähnung des Kanals, in dem Sie die Rangliste haben möchten (d.h. ``#Ranglisten-Kanal``). Wenn Sie die Erstellung der Rangliste abbrechen wollen, senden Sie mir bitte ``Stop``.",
     "leaderboardRefreshMessage": "Wird jede Stunde aktualisiert",
     "pointsShort": "Punkte",
     "leaderboardObjectiveMasterPointTitle": "Rangliste Gesamt-Meisterschaftspunkte",
@@ -369,7 +369,7 @@
     "leaderboardObjectiveMasterPointSpecifiedChamp": "Meisterschaftspunkt auf %s",
     "leaderboardObjectiveMasterPointSpecificChamp": "Meisterschaftspunkt für einen bestimmten Champion",
     "leaderboardObjectiveMasterPoint": "Meisterschaftspunkte",
-    "createLeaderboardTitleListeObjective": "Liste der Zielsetzungen :",
+    "createLeaderboardTitleListObjective": "Liste der Zielsetzungen :",
     "createLeaderboardCancelMessage": "Die Erstellung des Leaderboards wurde abgebrochen.",
     "createLeaderboardExplainMessage": "Okay, lassen Sie uns eine Rangliste erstellen. Welches Ziel wollen Sie anstreben ?",
     "createLeaderboardHelpMessage": "Starten des Ranglisten-Erstellungsassistenten. Kanalverwaltungs-Berechtigung erforderlich.",
