--- a/resources/languages/es.json
+++ b/resources/languages/es.json
@@ -6,23 +6,23 @@
     "helpMessageSendConfirmation": "Te mandé todos los comandos en un mensaje privado.",
     "missingPermissionOwnerMessage": "¡Hola! Soy un bot de tu servidor %s\nNecesito el permiso \"%s%\" en el canal de información para funcionar correctamente. Si necesitas ayuda puedes unirte el servidor de ayuda aquí: %s\nEste mensaje se enviará cada vez que me reinicio. ¡Gracias en avance!",
     "aboutCommandHelp": "Da información sobre el bot.",
-    "aboutMessage": "Hola, soy un bot de League Of Legends escrito en Java por KaluNight#0001. Ofrezco la posibilidad de crear un panel de información que te permite saber si tus amigos están en partida directamente en un canal de Discord dando información variada sobre las partidas actuales. Puedes contribuir a mi desarrollo en mi Github [aquí](%s).\nServidor de Discord oficial: %s\nPara añadirme a tu servidor, ¡Haz click [aquí](%s)!\n\n*¡Me gustan las mariposas, los unicornios, y ver el final de realidades finitas!*\n\nZoe no cuenta con el respaldo de Riot Games y no refleja los puntos de vista u opiniones de Riot Games o de cualquier persona oficialmente involucrada en la producción o gestión de League of Legends.",
+    "aboutMessage": "Hola, soy un bot de League Of Legends escrito en Java por KaluNight#0001. Ofrezco la posibilidad de crear un panel de información que te permite saber si tus amigos están en partida directamente en un canal de Discord dando información variada sobre las partidas actuales. Puedes contribuir a mi desarrollo en mi Github [aquí](%s).\nServidor de Discord oficial: %s\nPara añadirme a tu servidor, ¡Haz click [aquí](%s)!\n\n*¡Me gustan las mariposas, los unicornios, y ver el final de realidades finitas!*\n\nYuumi no cuenta con el respaldo de Riot Games y no refleja los puntos de vista u opiniones de Riot Games o de cualquier persona oficialmente involucrada en la producción o gestión de League of Legends.",
     "configCommandHelp": "Abre un mensaje interactivo para configurar el servidor.",
     "patchNotesCommandHelp": "Envía las notas de parche del bot de la versión actual (Las notas de parche están en inglés).",
     "refreshCommandHelp": "Actualiza manualmente el panel de información del servidor.",
     "resetCommandHelp": "Reinicia la configuración actual del servidor.",
-    "resetWarningMessage": "**CUIDADO**: ¡Este comando reiniciará la configuración de este servidor! Cosas relacionadas con Discord no serán eliminadas (Mensajes de Zoe y canales de texto). ¿Estás seguro que quieres hacer esto?\n\nSi es realmente lo que quieres hacer, responde: **YES**.",
+    "resetWarningMessage": "**CUIDADO**: ¡Este comando reiniciará la configuración de este servidor! Cosas relacionadas con Discord no serán eliminadas (Mensajes de Yuumi y canales de texto). ¿Estás seguro que quieres hacer esto?\n\nSi es realmente lo que quieres hacer, responde: **YES**.",
     "resetConfirmationMessage": "¡Okay, vamos! Reiniciando...",
     "resetDoneMessage": "Hecho, he sido restablecida correctamente.",
     "resetCancelMessage": "Muy bien, entonces no hago nada.",
     "resetTimeoutMessage": "He estado esperando más de un minuto. No esperaré más. Por favor, envía de nuevo el comando `>reset` si quieres reiniciarme.",
-    "setupHelpMessage": "Da información en cómo configurar a Zoe.",
+    "setupHelpMessage": "Da información en cómo configurar a Yuumi.",
     "setupMessage": "¡Hola!, como verás, mis comandos no son realmente complicados. Lo primero de todo, que sepas que puedes ver todos mis comandos con la ayuda del comando `>help`. Escribe `>nombreDelComando help` para obtener ayuda sobre un comando específico. Asegúrate de tener los permisos para gestionar los canales (Permiso \"Gestionar Canales\".)\n\n`1.` Para empezar, crea el canal de información con el comando `>create infoChannel nombredelcanal`. Puedes también definir uno existente con el comando `>define infoChannel #mencióndeuncanal`.\n`2.` Luego añade los jugadores al sistema usando el comando `>create player @Mencióndejugador (Servidor) (NombreDeInvocador)`. Puedes añadir una cuenta secuandaria a un jugador con el comando `>add accountToPlayer @Mencióndejugador (Servidor) (NombredeInvocador)`\n`3.` Puedes utilizar el comando `>config` para configurar el servidor como tú quieras.\n\n¡Eso es todo, tu sistema de información ha sido implementado! Si tienes preguntas, sugerencias, o solamente quieres hablar siéntete libre de venir aquí: https://discord.gg/whc5PrC\n*Nota: El panel de información se actualiza cada 5 minutos, y las tarjetas de información se mandan en ~20 segundos.*",
     "addAccountHelpMessage": "Añade al jugador mencionado la cuenta dada.",
     "permissionNeededMessage": "Necesitas el permiso \"%s\" para hacer eso.",
     "mentionNeededMessageWithUser": "Por favor menciona 1 miembro del servidor (e.j. `>create player @%s (Servidor) (NombreDeInvocador)`)",
     "permissionNeededUpdateOtherPlayer": "No puedes añadir una cuenta a otro jugador que no seas tú si no tienes permiso \"Gestionar canales\". Perdón por eso :/",
-    "mentionnedUserNotRegistered": "El usuario mencionado no está registrado, por favor regístralo primero con el comando `>create player`.",
+    "mentionedUserNotRegistered": "El usuario mencionado no está registrado, por favor regístralo primero con el comando `>create player`.",
     "addCommandMalformedWithoutRegionOption": "El comando está mal formado. Por favor respeta esta síntaxis: `>add %s @MenciónDeJugador (Servidor) (NombreDeInvocador)`",
     "addCommandMalformedWithRegionOption": "El comando está mal formado. Por favor respeta esta síntaxis: `>add %s @MenciónDeJugador (Servidor) (NombreDeInvocador)`\nSi el servidor no se especifica, se utilizará el determinado por defecto (%s).",
     "regionTagInvalid": "La etiqueta de servidor es inválida. (Etiquetas válidas: EUW, EUNE, NA, BR, JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Añade el jugador mencionado al equipo dado. Permiso \"Gestionar canales\" necesario.",
     "mentionOfPlayerNeeded": "¡Menciona a un jugador registrado!",
     "mentionOfUserNeedToBeAPlayer": "¡El usuario mencionado no es un jugador!",
-    "mentionnedPlayerIsAlreadyInATeam": "¡El jugador mencionado ya está en un equipo (%s)!",
+    "mentionedPlayerIsAlreadyInATeam": "¡El jugador mencionado ya está en un equipo (%s)!",
     "givenTeamNotExist": "¡Ese equipo no existe! (Pista: El nombre de equipo tiene que estar en paréntesis así: `add playerToTeam @Jugadormencionado (NombredeEquipo)`)",
     "playerAddedInTheTeam": "¡El jugador ha sido añadido!",
     "createInfoChannelHelpMessage": "Crea un nuevo canal de información donde puedo enviar información sobre los jugadores. Permiso \"Gestionar canales\" necesario.",
@@ -60,13 +60,13 @@
     "createTeamDoneMessage": "¡El equipo %s ha sido creado!",
     "registerCommandHelpMessage": "Registra a sí mismo como un jugador con la información especificada. Solo funciona cuando la opción \"Todo el mundo puede añadirse a sí mismo al sistema\" está activada.",
     "registerCommandOptionRequired": "Este comando solo puede usarse cuando la opción \"%s\" está activada.",
-    "registerCommandAlreadyInZoe": "Ya estás en el sistema. Si quieres añadir otra cuenta de LoL, usa el comando `>add account`.",
+    "registerCommandAlreadyInYuumi": "Ya estás en el sistema. Si quieres añadir otra cuenta de LoL, usa el comando `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "El comando está mal formado. Por favor respeta esta síntaxis: `>register (Servidor) (NombreDeInvocador)`",
     "registerCommandMalformedWithRegionOption": "El comando está mal formado. Por favor respeta esta síntaxis: `>register (Servidor) (NombreDeInvocador)`\nSi un servidor no es especificado, se usará el servidor por defecto (%s).",
     "registerCommandDoneMessage": "Has sido añadido con la cuenta \"%s\".",
     "defineInfoChannelHelpMessage": "Define un nuevo canal de información donde puedo enviar información sobre jugadores. Permiso \"Gestionar Canales\" necesario.",
     "defineInfoChannelAlreadySet": "El canal %s ya está definido. Elimínalo o desvincúlalo si quieres definir otro.",
-    "defineInfoChannelMentionOfAChannelNeeded": "Necesitas mencionar un canal así: `define infoChannnel #zoe-best-waifu`",
+    "defineInfoChannelMentionOfAChannelNeeded": "Necesitas mencionar un canal así: `define infoChannnel #yuumi-best-waifu`",
     "defineInfoChannelMentionOfAChannel": "¡Por favor menciona un canal de este server! (Te veo con tu truco de magia :eyes:)",
     "defineInfoChannelMissingSpeakPermission": "¡No puedo hablar en este canal! Dame permisos para escribir en este canal si quieres hacer eso.",
     "defineInfoChannelImpossibleToDefineCleanChannel": "No puedo definir el canal de información dentro del canal limpio (-> Mira la opción de configuración \"Canal limpio\").",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "¡No tengo canal de información definido! No puedo desvincular algo que no existe :P",
     "undefineInfoChannelDoneMessage": "¡He desvinculado el canal de información! He borrado todos los mensajes relacionados con mi actividad.",
     "deleteInfoChannelHelpMessage": "Borra el canal de información después de actualizarse. Permiso \"Gestionar canales\" necesario.",
-    "deleteInfoChannelChannelNotSetted": "¡El canal de información no está definido!",
+    "deleteInfoChannelChannelNotSet": "¡El canal de información no está definido!",
     "deleteInfoChannelDeletedMissingPermission": "¡El canal de información ha sido eliminado **DENTRO DEL SISTEMA**! ¡No tengo el permiso para borrar el canal!",
     "deleteInfoChannelDoneMessage": "¡El canal de información ha sido eliminado!",
     "deletePlayerHelpMessage": "Elimina el jugador mencionado",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "La cuenta \"%s\" ha sido desvinculada del jugador %s.",
     "removePlayerToTeamHelpMessage": "Elimina al jugador de su equipo. Permiso \"Gestionar canales\" necesario.",
     "removePlayerToTeamMissingMention": "¡Por favor, menciona a una persona!",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "¡El usuario mencionado no es un jugador registrado!",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "¡El usuario mencionado no es un jugador registrado!",
     "removePlayerToTeamNotInTheTeam": "Este jugador no está en ningún equipo.",
     "removePlayerToTeamDoneMessage": "¡%s ha sido eliminado del equipo \"%s\" !",
     "showPlayerHelpMessage": "Muestra a todos los jugadores con sus cuentas en el servidor.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Puntos de maestría",
     "cleanChannelOptionDisable": "Desactivado",
     "cleanChannelOptionDisableDesc": "Opción desactivada",
-    "cleanChannelOptionZoeCommands": "Borrar solo comandos de Zoe",
-    "cleanChannelOptionZoeCommandsDesc": "Esto borrará todos los nuevos comandos de Zoe en el canal",
+    "cleanChannelOptionYuumiCommands": "Borrar solo comandos de Yuumi",
+    "cleanChannelOptionYuumiCommandsDesc": "Esto borrará todos los nuevos comandos de Yuumi en el canal",
     "cleanChannelOptionAll": "Borrar todos los mensajes",
     "cleanChannelOptionAllDesc": "Esto borrará todos los nuevos mensajes enviados en el canal",
     "cleanChannelOptionDesc": "Crea un canal de texto limpio donde los mensajes/comandos son eliminados automáticamente.",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "¡Esta opción ya está desactivada!",
     "cleanChannelOptionNowDisable": "¡Okay! La opción ha sido desactivada, no borraré mensajes en el canal limpio.",
     "cleanChannelOptionSendTextChannel": "¡Un último paso y ya está! Ahora por favor **envía un mensaje mencionando el canal de texto que quieres definir**",
-    "cleanChannelOptionTopicChannelZoeCommands": "Todos los comandos de Zoe enviados aquí serán eliminados después de 3 segundos.",
+    "cleanChannelOptionTopicChannelYuumiCommands": "Todos los comandos de Yuumi enviados aquí serán eliminados después de 3 segundos.",
     "cleanChannelOptionTopicChannelAll": "Todos los mensajes enviados aquí serán eliminados después de 3 segundos.",
     "cleanChannelOptionCreatedDoneMessage": "¡Perfecto! He creado un canal con nombre \"clean-channel\". Puedes cambiar las opciones de este canal como quieras, solo déjame mis permisos dentro y todo funcionará.",
-    "cleanChannelOptionInfoMessageZoeCommands": "Información: De ahora en adelante, los comandos de Zoe enviados aquí serán eliminados tras 3 segundos.",
+    "cleanChannelOptionInfoMessageYuumiCommands": "Información: De ahora en adelante, los comandos de Yuumi enviados aquí serán eliminados tras 3 segundos.",
     "cleanChannelOptionInfoMessageAll": "Información: De ahora en adelante, todos los mensajes enviados aquí serán eliminados tras 3 segundos.",
-    "cleanChannelOptionSettedDoneMessage": "¡Perfecto! El canal ha sido configurado correctamente. Por favor, comprueba que tenga todos los permisos necesarios dentro (Gestionar mensajes, Leer, Leer historial).",
+    "cleanChannelOptionSetDoneMessage": "¡Perfecto! El canal ha sido configurado correctamente. Por favor, comprueba que tenga todos los permisos necesarios dentro (Gestionar mensajes, Leer, Leer historial).",
     "cleanChannelOptionSelectInfoChannel": "Has seleccionado el canal de información, esta configuración es imposible de llevar a cabo ahí. La configuración ha sido cancelada.",
     "cleanChannelOptionOneTextChannelRequired": "No has mencionado ningún canal de texto. La configuración ha sido cancelada.",
     "cleanChannelOptionResponseTimeOut": "El tiempo de espera de 2 minutos ha acabado. Por favor, vuelve a invocar el comando si quieres configurar esta opción.",
@@ -164,8 +164,8 @@
     "regionOptionSelectionCanceledMessage": "Selección cancelada",
     "roleOptionDescription": "Oculta el canal de información a no-jugadores con un rol",
     "roleOptionPermissionNeeded": "Necesito el permiso \"Gestionar roles\" para activar esta opción. Por favor, dame este permiso si quieres activarla.",
-    "roleOptionLongDesc": "Opción para activar: **%s**\n\nActivar esta opción creará un rol llamado \"Zoe-Player\" y lo asignará a todos los jugadores registrados. Puedes actualizarlo como quieras. Si el rol fue eliminado, esta opción se desactivará automáticamente.\n\n:white_check_mark: : Activar esta opción\n:x: : Cancelar la activación",
-    "roleOptionLongDescDisable": "Opción que quieres desactivar: **%s**\n\nDesactivarla **borrará el rol Zoe-Player** y hará el canal de información legible por todo el mundo.\n\n:white_check_mark: : **Desactivar** esta opción.\n:x: : Cancelar la desactivación.",
+    "roleOptionLongDesc": "Opción para activar: **%s**\n\nActivar esta opción creará un rol llamado \"Yuumi-Player\" y lo asignará a todos los jugadores registrados. Puedes actualizarlo como quieras. Si el rol fue eliminado, esta opción se desactivará automáticamente.\n\n:white_check_mark: : Activar esta opción\n:x: : Cancelar la activación",
+    "roleOptionLongDescDisable": "Opción que quieres desactivar: **%s**\n\nDesactivarla **borrará el rol Yuumi-Player** y hará el canal de información legible por todo el mundo.\n\n:white_check_mark: : **Desactivar** esta opción.\n:x: : Cancelar la desactivación.",
     "roleOptionActivateWaitMessage": "Bien, activaré eso rápidamente. Espera 2 segundos...",
     "roleOptionDoneMessage": "¡La configuración ha terminado! Ahora solo usuarios registrados podrán ver el canal de información.",
     "roleOptionCancelMessage": "Bueno, si algún día cambias de idea, sabes dónde estoy :3.",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "Modo temporal",
     "blueTeam": "Equipo Azul",
     "redTeam": "Equipo Rojo",
-    "masteriesWrTitleRespectSize": "Maestrías | WR este mes",
+    "masteryWrTitleRespectSize": "Maestrías | WR este mes",
     "soloqTitleRespectSize": "Rango de SoloQ",
     "infoCardsGameInfoTitle": "Información en la partida de",
     "infoCardsGameFooter": "Duración actual de la partida",
@@ -250,14 +250,14 @@
     "2HoursAgo": "Hace 2 horas",
     "1HourAgo": "Hace 1 hora",
     "30MinutesAgo": "Hace 30 minutos",
-    "fewsMinutesAgo": "Hace unos minutos",
+    "fewMinutesAgo": "Hace unos minutos",
     "infoCardsGameInfoOnTheGameOf": "Información en la partida de",
     "infoCardsGameInfoAndOf": "y de",
     "account": "Cuenta",
     "firstGame": "Primera partida",
     "nativeActualLanguage": "#MENSAJE PARA TRADUCTORES: No traduzcas eso, pon el nombre del idioma en tu idioma#Español",
     "languageCommandInSelectionMenu": "Idioma seleccionado: **%s**",
-    "languageCommandHelp": "Comando para seleccionar el idioma de Zoe",
+    "languageCommandHelp": "Comando para seleccionar el idioma de Yuumi",
     "addingSystemEndMessage": "La configuración básica está completa. Espero que disfrutes mis servicios :D",
     "addingSystemRegionSelected": "Vale, has definido la región \"%s\". Ahora te daré algunos consejos sobre mi uso:",
     "addingSystemLanguageSelected": "Perfecto, ahora hablaré en %s. (Siempre podrás cambiar mi idioma con el comando `>l`). Ahora vamos a seleccionar una región predeterminada para el servidor:",
@@ -268,7 +268,7 @@
     "rankChannelAlreadyExist": "¡El canal clasificatorio ya existe!",
     "rankChannelCorrectlyCreated": "¡El canal clasificatorio ha sido creado correctamente!",
     "deleteRankChannelHelpMessage": "Elimina el canal clasificatorio. Permiso Gestionar Canales necesario.",
-    "deleteRankChannelNotSetted": "¡El canal clasificatorio no está definido!",
+    "deleteRankChannelNotSet": "¡El canal clasificatorio no está definido!",
     "silver": "Plata",
     "gold": "Oro",
     "platinum": "Platino",
@@ -324,11 +324,11 @@
     "infopanelMessageReSendMessage": "Estoy recreando el panel de información, por favor espera...",
     "leaderboardObjectiveAverageKDASpecifiedChamp": "Promedio de KDA en %s",
     "leaderboardObjectiveSelected": "Has seleccionado el objetivo \"%s\".",
-    "createLeaderboardTitleListeObjective": "Lista de objetivos:",
+    "createLeaderboardTitleListObjective": "Lista de objetivos:",
     "leaderboardSpecifiedQueueRank": "%s de colas clasificatorias",
     "leaderboardObjectiveAverageKDASpecificChamp": "Promedio de KDA en un campeón específico",
     "leaderboardObjectiveChannelSelectionTimeOut": "Has tardado mucho en seleccionar una canal. Por favor inténtalo de nuevo.",
-    "createLeaderboardNeedOneMentionnedChannel": "Por favor envíame la mención del canal donde quieres colocar la tabla de clasificación (p.e. ``#leaderboard-channel``). Si quieres cancelar la creación de la tabla de clasificación, por favor envía ``Stop``.",
+    "createLeaderboardNeedOneMentionedChannel": "Por favor envíame la mención del canal donde quieres colocar la tabla de clasificación (p.e. ``#leaderboard-channel``). Si quieres cancelar la creación de la tabla de clasificación, por favor envía ``Stop``.",
     "leaderboardDataNeededSpecificChamp": "Necesitas introducir el campeón para este tipo de tabla de clasificación . Por favor, introduce el campeón enviando **su nombre** o **su número**.  Si quieres cancelar la creación de la tabla de clasificación, envía  ``Stop``.",
     "leaderboardSelectQueue": "Para este tipo de tabla de clasificación es necesario introducir una cola de clasificatoria específica. Por favor, selecciona una cola de esta lista:",
     "deleteLeaderboardCommandListProposal": "Aquí están las tablas de clasificatoria del servidor, por favor, selecciona la que quieras eliminar:",
