--- a/resources/languages/ro.json
+++ b/resources/languages/ro.json
@@ -6,23 +6,23 @@
     "helpMessageSendConfirmation": "Ți-am trimis toate comenzile într-un mesaj privat.",
     "missingPermissionOwnerMessage": "Hei! Sunt unul din boții serverului tău %s.\n\nAm nevoie de \"%s\" ca și permisiune în infochannel ca să lucrez corect. Dacă ai nevoie de ajutor, poți intra pe serverul de ajutor aici : %s\n\nAcest mesaj va fi trimis de fiecare data când îmi dau reboot.\nMersi anticipat!",
     "aboutCommandHelp": "Oferă informații despre bot.",
-    "aboutMessage": "Hei, sunt un bot al League of Legends, scris în Java de KaluNight#0001. Ofer posibilitatea de a crea un panel de informații care te lasă să vezi daca prietenii tăi sunt într-un joc, direct într-un canal de Discord, dând în același timp informații vaste despre jocurile actuale. Poți contribui la dezvoltarea mea pe Github [aici](%s)\nServer-ul oficial de Discord: %s\nPentru a mă adaugă pe server-ul tău, da click [aici](%s)\n\nÎmi plac fluturașii, unicornii și să urmăresc sfârșitul realităților finite!*\n\nZoe nu este proprietatea Riot și nu reflecta părerile sau opinile acestora, sau a celor oficial implicați în producerea și mentenanța League of Legends.",
+    "aboutMessage": "Hei, sunt un bot al League of Legends, scris în Java de KaluNight#0001. Ofer posibilitatea de a crea un panel de informații care te lasă să vezi daca prietenii tăi sunt într-un joc, direct într-un canal de Discord, dând în același timp informații vaste despre jocurile actuale. Poți contribui la dezvoltarea mea pe Github [aici](%s)\nServer-ul oficial de Discord: %s\nPentru a mă adaugă pe server-ul tău, da click [aici](%s)\n\nÎmi plac fluturașii, unicornii și să urmăresc sfârșitul realităților finite!*\n\nYuumi nu este proprietatea Riot și nu reflecta părerile sau opinile acestora, sau a celor oficial implicați în producerea și mentenanța League of Legends.",
     "configCommandHelp": "Deschide un mesaj interactiv pentru a configura server-ul.",
     "patchNotesCommandHelp": "Trimite patch-ul versiunii actuale. (Patch-urile sunt în engleză).",
     "refreshCommandHelp": "Reimprospateaza manual info panel-ul server-ului tau.",
     "resetCommandHelp": "Resetează actuala configurație a server-ului.",
-    "resetWarningMessage": "**AVERTISMENT**: Această comandă va reseta configurația botului pentru acest server! Lucrurile legate de Discord nu vor fi șterse (mesajele lui Zoe și canalele text). Ești sigur că vrei să faci asta?\n\nDacă este într-adevăr ceea ce vrei să faci, răspunde: ** DA **.",
+    "resetWarningMessage": "**AVERTISMENT**: Această comandă va reseta configurația botului pentru acest server! Lucrurile legate de Discord nu vor fi șterse (mesajele lui Yuumi și canalele text). Ești sigur că vrei să faci asta?\n\nDacă este într-adevăr ceea ce vrei să faci, răspunde: ** DA **.",
     "resetConfirmationMessage": "Bine, să-i dăm drumul! Resetare ...",
     "resetDoneMessage": "Gata, am fost resetată corect.",
     "resetCancelMessage": "Bine, deci nu fac nimic.",
     "resetTimeoutMessage": "Aștept de mai bine de un minut. Nu voi aștepta mai mult. Retrimite comanda '>reset' dacă dorești să mă resetezi.",
-    "setupHelpMessage": "Oferă informații despre să o configurezi pe Zoe.",
+    "setupHelpMessage": "Oferă informații despre să o configurezi pe Yuumi.",
     "setupMessage": "Bună, vei vedea, comenzile mele nu sunt foarte complicate. Mai întâi de toate, știu că poți vedea toate comenzile mele cu un ajutor folosind comanda \":helpr\". Tastați '>commandName help' pentru a obține ajutor despre o anumită comandă. De asemenea, asigură-te că ai dreptul de a gestiona canalele (permisiunea Manage Channels).\n\n1. Pentru a începe, creați un canal de informații cu comanda \">create infoChannel channelName\". De asemenea, aveți posibilitatea să definiți unul existent cu comanda '>define infoChannel #mentionOfAChannel\".\n2. Apoi adăugați jucătorii League of Legends la sistem folosind comanda '>create player @MentionOfPlayer (Region) (SummonerName)'. Puteți adăuga un cont secundar unui jucător cu comanda '>add accountToPlayer @mentionOfPlayer (Region) (SummonerName)'\n3. Puteți utiliza comanda '>config' pentru a configura serverul așa cum vrei.\n\nAsta e, sistemul tău de informații a fost bine implementat. Dacă ai întrebări, cereri de caracteristici sau doar discuta nu ezita să vii aici: https://discord.gg/whc5PrC\n*Notă: Panoul de informații este actualizat la fiecare 5 minute,  infocard-uri trimise în ~ 20 sec.*",
     "addAccountHelpMessage": "Adaugă jucătorul menționat la contul dat.",
     "permissionNeededMessage": "Ai nevoie de permisiunea \"%s\" pentru a face acest lucru.",
     "mentionNeededMessageWithUser": "Te rog să menționezi un membru al serverului (de exemplu, `>create player @%s (Region) (SummonerName)`)",
     "permissionNeededUpdateOtherPlayer": "Nu poți adăuga un cont la un alt jucător decât dacă ai permisiunea de gestionare a canalului. Îmi pare rău despre asta :/",
-    "mentionnedUserNotRegistered": "Utilizatorul menționat nu este înregistrat, te rog să-l creezi mai întâi cu comanda `>create player`.",
+    "mentionedUserNotRegistered": "Utilizatorul menționat nu este înregistrat, te rog să-l creezi mai întâi cu comanda `>create player`.",
     "addCommandMalformedWithoutRegionOption": "Comanda este incorect formată. Respectă acest model : `>add %s @DiscordPlayerMention (Regiune) (SummonerName)`",
     "addCommandMalformedWithRegionOption": "Comanda este formată greșit. Te rog să respecți următorul model :  `>adaugă @DiscordPlayerMention (Region) (SummonerName)`\nDacă regiunea nu este setată, regiunea default va fi folosită (%s).",
     "regionTagInvalid": "Tag-ul regiunii este invalid. (Tag-uri valide : EUW, EUNE, NA, BR, JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Adaugă jucătorul menționat echipei aferente. Gestionarea canalului de permisiuni este necesară.",
     "mentionOfPlayerNeeded": "Te rog să menționezi un jucător înregistrat !",
     "mentionOfUserNeedToBeAPlayer": "User-ul menționat nu este un jucător!",
-    "mentionnedPlayerIsAlreadyInATeam": "Jucătorul menționat are deja o altă echipă atribuită (%s) !",
+    "mentionedPlayerIsAlreadyInATeam": "Jucătorul menționat are deja o altă echipă atribuită (%s) !",
     "givenTeamNotExist": "Echipa selectată nu există! (Hint: Numele echipei trebuie să fie în paranteze precum : `>add playerToTeam @PlayerMentioned (TeamName)`)",
     "playerAddedInTheTeam": "Jucătorul a fost adăugat!",
     "createInfoChannelHelpMessage": "Crează un nou Canal de Informații unde pot trimite informații  despre jucători. Gestionarea canalului de permisiuni este necasară.",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "Echipa \"%s\" a fost creată !",
     "registerCommandHelpMessage": "Înregistrează-l pe cel care a scris ca un jucător cu informația dată. Acest lucru se poate întâmpla doar când opțiunea **Everyone can add/delete them self in the system** este activată.",
     "registerCommandOptionRequired": "Această comandă poate fi folosită numai când optinea  \"%s\" este pornită.",
-    "registerCommandAlreadyInZoe": "Ești deja în sistem. Dacă vrei să adaugi un alt cont de lol, folosește comanda `>add account`.",
+    "registerCommandAlreadyInYuumi": "Ești deja în sistem. Dacă vrei să adaugi un alt cont de lol, folosește comanda `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "Comanda are un format greșit. Te rog respectă modelul : `>register (Region) (SummonerName)`",
     "registerCommandMalformedWithRegionOption": "Comanda are un format greșit. Te rog respectă modelul : `>register (Region) (SummonerName)`. Dacă regiunea nu este setată, va fi folosită cea de bază.(%s).",
     "registerCommandDoneMessage": "Ai fost adăugat cu contul  \"%s\".",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "Nu am niciun canal de informații înregistrat ! Nu pot să redefinesc ceva ce nu există :p",
     "undefineInfoChannelDoneMessage": "",
     "deleteInfoChannelHelpMessage": "Șterge canalul de informații după refresh. Este necesară gestionarea permisiuniilor pe acest canal.",
-    "deleteInfoChannelChannelNotSetted": "Canalul de informații nu este definit!",
+    "deleteInfoChannelChannelNotSet": "Canalul de informații nu este definit!",
     "deleteInfoChannelDeletedMissingPermission": "Canalul de informații a fost șters  **INSIDE THE SYSTEM**!  Nu am permisiunea necesară să șterg canalul de text!",
     "deleteInfoChannelDoneMessage": "Canalul de informații a fost șters!",
     "deletePlayerHelpMessage": "Șterge jucătorul dat",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "",
     "removePlayerToTeamHelpMessage": "Șterge jucătorul menționat din această echipă. Gestionarea permisiuniilor de pe acest canal este necesară.",
     "removePlayerToTeamMissingMention": "Te rog să menționezi o persoană !",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "Persoană menționată nu este un jucător înregistrat !",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "Persoană menționată nu este un jucător înregistrat !",
     "removePlayerToTeamNotInTheTeam": "Acest jucător nu se regăsește în nicio echipă.",
     "removePlayerToTeamDoneMessage": "%s a fost șters din echipa\"%s\" !",
     "showPlayerHelpMessage": "Arătă toți jucătorii cu conturile de pe server.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Puncte de mastery",
     "cleanChannelOptionDisable": "Inchide",
     "cleanChannelOptionDisableDesc": "Opțiune oprită",
-    "cleanChannelOptionZoeCommands": "Șterge doar comenziile lui Zoe",
-    "cleanChannelOptionZoeCommandsDesc": "Asta va șterge toate comenziile noi ale lui Zoe din acest canal",
+    "cleanChannelOptionYuumiCommands": "Șterge doar comenziile lui Yuumi",
+    "cleanChannelOptionYuumiCommandsDesc": "Asta va șterge toate comenziile noi ale lui Yuumi din acest canal",
     "cleanChannelOptionAll": "Șterge toate mesajele",
     "cleanChannelOptionAllDesc": "Asta va șterge toate mesajele noi trimise pe acest canal",
     "cleanChannelOptionDesc": "",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "Optinea este deja dezactivată !",
     "cleanChannelOptionNowDisable": "Okay ! Opțiunea este acum dezactivată, nu o să mai șterg mesajele din canalul curat.",
     "cleanChannelOptionSendTextChannel": "",
-    "cleanChannelOptionTopicChannelZoeCommands": "",
+    "cleanChannelOptionTopicChannelYuumiCommands": "",
     "cleanChannelOptionTopicChannelAll": "",
     "cleanChannelOptionCreatedDoneMessage": "",
-    "cleanChannelOptionInfoMessageZoeCommands": "",
+    "cleanChannelOptionInfoMessageYuumiCommands": "",
     "cleanChannelOptionInfoMessageAll": "",
-    "cleanChannelOptionSettedDoneMessage": "",
+    "cleanChannelOptionSetDoneMessage": "",
     "cleanChannelOptionSelectInfoChannel": "",
     "cleanChannelOptionOneTextChannelRequired": "",
     "cleanChannelOptionResponseTimeOut": "",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "",
     "blueTeam": "",
     "redTeam": "",
-    "masteriesWrTitleRespectSize": "",
+    "masteryWrTitleRespectSize": "",
     "soloqTitleRespectSize": "",
     "infoCardsGameInfoTitle": "",
     "infoCardsGameFooter": "",
@@ -250,7 +250,7 @@
     "2HoursAgo": "",
     "1HourAgo": "",
     "30MinutesAgo": "",
-    "fewsMinutesAgo": "",
+    "fewMinutesAgo": "",
     "infoCardsGameInfoOnTheGameOf": "",
     "infoCardsGameInfoAndOf": "",
     "account": "",
@@ -268,7 +268,7 @@
     "rankChannelAlreadyExist": "",
     "rankChannelCorrectlyCreated": "",
     "deleteRankChannelHelpMessage": "",
-    "deleteRankChannelNotSetted": "",
+    "deleteRankChannelNotSet": "",
     "deleteRankChannelDeletedMissingPermission": "",
     "deleteRankChannelDoneMessage": "",
     "defineRankChannelHelpMessage": "",
@@ -325,7 +325,7 @@
     "createLeaderboardHelpMessage": "",
     "createLeaderboardExplainMessage": "",
     "createLeaderboardCancelMessage": "",
-    "createLeaderboardTitleListeObjective": "",
+    "createLeaderboardTitleListObjective": "",
     "leaderboardObjectiveMasterPoint": "",
     "leaderboardObjectiveMasterPointSpecificChamp": "",
     "leaderboardObjectiveMasterPointSpecifiedChamp": "",
@@ -341,7 +341,7 @@
     "leaderboardObjectiveMasterPointTitle": "",
     "pointsShort": "",
     "leaderboardRefreshMessage": "",
-    "createLeaderboardNeedOneMentionnedChannel": "",
+    "createLeaderboardNeedOneMentionedChannel": "",
     "leaderboardObjectiveBaseMessage": "",
     "leaderboardMissingPermission": "",
     "leaderboardSuccessfullyCreated": "",
