--- a/resources/languages/ru.json
+++ b/resources/languages/ru.json
@@ -6,7 +6,7 @@
     "helpMessageSendConfirmation": "Я отправлю вам все команды  в личное сообщение.",
     "missingPermissionOwnerMessage": "Привет!  Я бот вашего сервера %s.\n Мне нужно разрешение \"%s\" в информационном канале для правильной работы.  Если вам нужна помощь, вы можете присоединиться к серверу для справки здесь: %s\nЭто сообщение будет отправлено при каждой перезагрузке.  Заранее спасибо !",
     "aboutCommandHelp": "Предоставьте информацию по боту.",
-    "aboutMessage": "Привет, я бот из League of Legends, написанный на Java от KaluNight#0001. Я предлагаю возможность создать информационную панель, которая позволит вам узнать непосредственно на канале Discord, находятся ли ваши друзья в игре, и в то же время предоставлять различную информацию о текущих играх. Вы можете внести свой вклад в мое развитие на моем Github [здесь] (%s).\nОфициальный сервер Discord: %s\nЧтобы добавить меня на свой сервер, нажмите [здесь] (%s)!\n\n* Я люблю бабочек, единорогов и наблюдаю конец конечных реалий! *\n\nZoe не одобрен Riot Games и не отражает взгляды или мнения Riot Games или кого-либо, кто официально вовлечен в создание или управление League of Legends.",
+    "aboutMessage": "Привет, я бот из League of Legends, написанный на Java от KaluNight#0001. Я предлагаю возможность создать информационную панель, которая позволит вам узнать непосредственно на канале Discord, находятся ли ваши друзья в игре, и в то же время предоставлять различную информацию о текущих играх. Вы можете внести свой вклад в мое развитие на моем Github [здесь] (%s).\nОфициальный сервер Discord: %s\nЧтобы добавить меня на свой сервер, нажмите [здесь] (%s)!\n\n* Я люблю бабочек, единорогов и наблюдаю конец конечных реалий! *\n\nYuumi не одобрен Riot Games и не отражает взгляды или мнения Riot Games или кого-либо, кто официально вовлечен в создание или управление League of Legends.",
     "configCommandHelp": "Откройте интерактивное сообщение для настройки сервера.",
     "patchNotesCommandHelp": "Получить описание последнего патча (патч на английском языке).",
     "refreshCommandHelp": "Обновите вручную информационную панель сервера.",
@@ -16,13 +16,13 @@
     "resetDoneMessage": "Готово, мои настройки были сброшены правильно.",
     "resetCancelMessage": "Отлично,  в таком случае я ничего не сделаю.",
     "resetTimeoutMessage": "Я ждала больше минуты и больше уже не буду. Пожалуйста, отправьте команду повторно `>reset`, если вы хотите выполнить сброс самостоятельно.",
-    "setupHelpMessage": "Получите информацию о том, как настроить Zoe.",
+    "setupHelpMessage": "Получите информацию о том, как настроить Yuumi.",
     "setupMessage": "Привет, вы увидите, что мои команды не такие сложные. Прежде всего знайте, что вы можете посмотреть все команды при помощи команды `>help`. Введите `>commandName help`, чтобы получить справку о конкретной команде. Также убедитесь, что у вас есть право управлять каналами (разрешение «Управление каналами»).\n\n1. Для начала создайте информационный канал с помощью команды `>create infoChannel имя канала`. Вы также можете определить существующий с помощью команды `>define infoChannel #выберите нужный канал из всплывающего списка`.\n2. Затем добавьте в систему игроков League of Legends с помощью команды `>create player @Дискорд-никнейм (Сервер) (Имя призывателя)`. Вы можете добавить дополнительную учетную запись к игроку с помощью команды `>add accountToPlayer @Дискорд-никнейм (Сервер) (Имя призывателя)`\n3. Вы можете использовать команду `>config` для настройки вашего сервера так, как вы хотите.\n\nВот и все, ваша информационная система была хорошо реализована. Если у вас есть вопросы, пожелания или просто обсуждения, не стесняйтесь, приходите сюда: https://discord.gg/whc5PrC\n* Примечание: информационная панель обновляется каждые 3 минуты, инфо-карты отправляются через ~ 20 секунд. *",
     "addAccountHelpMessage": "Добавьте к указанному игроку данный аккаунт.",
     "permissionNeededMessage": "Для этого вам нужно разрешение \"%s\".",
     "mentionNeededMessageWithUser": "Пожалуйста, укажите 1 участника сервера (например, `>create player @%s (Регион) (Имя призывателя)`)",
     "permissionNeededUpdateOtherPlayer": "Вы не можете добавить аккаунт к другому игроку, если у вас нет разрешения на управление каналом. Простите за это :/",
-    "mentionnedUserNotRegistered": "Упомянутый пользователь не зарегистрирован, сначала создайте его с помощью команды `>create player`.",
+    "mentionedUserNotRegistered": "Упомянутый пользователь не зарегистрирован, сначала создайте его с помощью команды `>create player`.",
     "addCommandMalformedWithoutRegionOption": "Команда неверна. Пожалуйста, соблюдайте этот шаблон: `>add %s @Дискорд-никнейм (Регион) (Имя призывателя)`",
     "addCommandMalformedWithRegionOption": "Команда неверна. Пожалуйста, соблюдайте этот шаблон: `>add %s @Дискорд-никнейм (Регион) (Имя призывателя)`\nЕсли регион не задан, будет использоваться регион по умолчанию (%s).",
     "regionTagInvalid": "Тег региона недействителен. (Действительный тег: EUW, EUNE, NA, BR, JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Добавьте выбранного игрока в данную команду. Требуется разрешение на управление каналом.",
     "mentionOfPlayerNeeded": "Пожалуйста, укажите одного зарегистрированного игрока!",
     "mentionOfUserNeedToBeAPlayer": "Выбранный пользователь не игрок!",
-    "mentionnedPlayerIsAlreadyInATeam": "У выбранного игрока уже есть другая команда (%s)!",
+    "mentionedPlayerIsAlreadyInATeam": "У выбранного игрока уже есть другая команда (%s)!",
     "givenTeamNotExist": "Данная команда не существует! (Подсказка: название команды должно быть в следующих скобках: `> add playerToTeam @Дискорд-никнейм (Название команды)`)",
     "playerAddedInTheTeam": "Игрок был добавлен !",
     "createInfoChannelHelpMessage": "Создайте новый инфо-канал, где я смогу отправлять информацию об игроках. Требуется разрешение на управление каналом.",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "Команда \"%s\" создана!",
     "registerCommandHelpMessage": "Зарегистрируйте писателя как игрока с заданной информацией. Включайте только тогда, когда активирована опция ** Каждый может добавлять / удалять себя в системе **.",
     "registerCommandOptionRequired": "Эта команда может использоваться только в том случае, если включена опция «%s».",
-    "registerCommandAlreadyInZoe": "Вы уже в системе. Если вы хотите добавить другую учетную запись, используйте команду `>add account`.",
+    "registerCommandAlreadyInYuumi": "Вы уже в системе. Если вы хотите добавить другую учетную запись, используйте команду `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "Команда неверна. Пожалуйста, соблюдайте этот шаблон: `>register (Регион) (Имя призывателя)`",
     "registerCommandMalformedWithRegionOption": "Команда неверна. Пожалуйста, соблюдайте этот шаблон: `>register (Регион) (Имя призывателя)`\nЕсли регион не задан, будет использоваться регион по умолчанию (%s).",
     "registerCommandDoneMessage": "Вы были добавлены с учетной записью \"%s\".",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "У меня нет зарегистрированного информационного канала! Я не могу определить то, что не существует :p",
     "undefineInfoChannelDoneMessage": "Я не определила информационный канал! Я удалила все сообщения, связанные с моей деятельностью.",
     "deleteInfoChannelHelpMessage": "Удалите информационный канал после обновления. Требуется разрешение на управление каналом.",
-    "deleteInfoChannelChannelNotSetted": "Информационный канал не определен!",
+    "deleteInfoChannelChannelNotSet": "Информационный канал не определен!",
     "deleteInfoChannelDeletedMissingPermission": "Информационный канал был удален ** ВНУТРИ СИСТЕМЫ **! У меня нет разрешения на удаление текстового канала!",
     "deleteInfoChannelDoneMessage": "Информационный канал был удален!",
     "deletePlayerHelpMessage": "Удалить данного игрока",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "Аккаунт \"%s\" отключен от игрока %s.",
     "removePlayerToTeamHelpMessage": "Удалить данного игрока из его команды. Требуется разрешение на управление каналом.",
     "removePlayerToTeamMissingMention": "Пожалуйста, укажите одного человека !",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "Указанные люди не являются зарегистрированными игроками!",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "Указанные люди не являются зарегистрированными игроками!",
     "removePlayerToTeamNotInTheTeam": "Этот игрок не состоит в команде.",
     "removePlayerToTeamDoneMessage": "%s был удален из команды \"%s\" !",
     "showPlayerHelpMessage": "Показать всех игроков с их учетными записями на сервере.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Очки мастерства",
     "cleanChannelOptionDisable": "Отключить",
     "cleanChannelOptionDisableDesc": "Опция отключена",
-    "cleanChannelOptionZoeCommands": "Удалить только команды Zoe",
-    "cleanChannelOptionZoeCommandsDesc": "Это удалит все новые команды Zoe в канале",
+    "cleanChannelOptionYuumiCommands": "Удалить только команды Yuumi",
+    "cleanChannelOptionYuumiCommandsDesc": "Это удалит все новые команды Yuumi в канале",
     "cleanChannelOptionAll": "Удалить все сообщения",
     "cleanChannelOptionAllDesc": "Это удалит все новые сообщения, отправленные в канале",
     "cleanChannelOptionDesc": "Создаст новый текстовый канал, где сообщения / команды будут автоматически очищаться.",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "Опция уже отключена!",
     "cleanChannelOptionNowDisable": "Хорошо ! Опция теперь отключена, я больше не буду удалять сообщения в чистом канале.",
     "cleanChannelOptionSendTextChannel": "Еще один шаг и у нас все получится ! Пожалуйста, **отправьте сообщение с указанием текстового канала, который вы хотите установить**",
-    "cleanChannelOptionTopicChannelZoeCommands": "Все отправленные здесь команды Zoe будут удалены через 3 секунды.",
+    "cleanChannelOptionTopicChannelYuumiCommands": "Все отправленные здесь команды Yuumi будут удалены через 3 секунды.",
     "cleanChannelOptionTopicChannelAll": "Все отправленные здесь сообщения будут удалены через 3 секунды.",
     "cleanChannelOptionCreatedDoneMessage": "Отлично ! Я создал канал с названием «чистый канал». Вы можете изменить опцию этого канала, как вы хотите. Просто дайте мне мои разрешения внутри, и все будет работать.",
-    "cleanChannelOptionInfoMessageZoeCommands": "Информация: с этого момента отправленные здесь команды Zoe будут удалены через 3 секунды.",
+    "cleanChannelOptionInfoMessageYuumiCommands": "Информация: с этого момента отправленные здесь команды Yuumi будут удалены через 3 секунды.",
     "cleanChannelOptionInfoMessageAll": "Информация: с этого момента все отправленные здесь сообщения будут удалены через 3 секунды.",
-    "cleanChannelOptionSettedDoneMessage": "Отлично ! Канал был правильно настроен. Пожалуйста, убедитесь, что у меня есть все необходимые разрешения (Управление сообщениями, Чтение сообщений, Чтение истории).",
+    "cleanChannelOptionSetDoneMessage": "Отлично ! Канал был правильно настроен. Пожалуйста, убедитесь, что у меня есть все необходимые разрешения (Управление сообщениями, Чтение сообщений, Чтение истории).",
     "cleanChannelOptionSelectInfoChannel": "Вы выбрали информационный канал, эту конфигурацию невозможно настроить. Конфигурация была отменена.",
     "cleanChannelOptionOneTextChannelRequired": "Вы не упомянули один текстовый канал. Конфигурация была отменена.",
     "cleanChannelOptionResponseTimeOut": "Время ожидания в 2 минуты истекло. Пожалуйста, повторите команду, если вы хотите настроить эту опцию.",
@@ -164,8 +164,8 @@
     "regionOptionSelectionCanceledMessage": "Выбор отменен",
     "roleOptionDescription": "Не отображать информационный канал для игроков без роли",
     "roleOptionPermissionNeeded": "Мне нужно разрешение на управление ролями, чтобы активировать эту опцию. Пожалуйста, дайте мне это разрешение, если вы хотите активировать эту опцию.",
-    "roleOptionLongDesc": "Активация опции : **%s**\n\nАктивируйте эту опцию, чтобы создать роль под названием «Zoe-Player» и назначить ее всем зарегистрированным игрокам. Вы можете обновлять её, как захотите. Если роль была удалена, опция будет отключена автоматически.\n\n:white_check_mark: : Активировать опцию\n:x: : Отменить активацию",
-    "roleOptionLongDescDisable": "Опция, которую вы хотите отключить: **%s**\n\nОтключение приведет к удалению роли Zoe-Player и будет изменен информационный канал, доступный для чтения всем.\n\n: white_check_mark:: ** Отключить ** параметр.\n: x:: отменить деактивацию.",
+    "roleOptionLongDesc": "Активация опции : **%s**\n\nАктивируйте эту опцию, чтобы создать роль под названием «Yuumi-Player» и назначить ее всем зарегистрированным игрокам. Вы можете обновлять её, как захотите. Если роль была удалена, опция будет отключена автоматически.\n\n:white_check_mark: : Активировать опцию\n:x: : Отменить активацию",
+    "roleOptionLongDescDisable": "Опция, которую вы хотите отключить: **%s**\n\nОтключение приведет к удалению роли Yuumi-Player и будет изменен информационный канал, доступный для чтения всем.\n\n: white_check_mark:: ** Отключить ** параметр.\n: x:: отменить деактивацию.",
     "roleOptionActivateWaitMessage": "Хорошо, я активирую это быстро. Подождите 2 секунды ...",
     "roleOptionDoneMessage": "Конфигурация закончилась! Теперь только зарегистрированный игрок может видеть инфо-канал.",
     "roleOptionCancelMessage": "Ну, если ты когда-нибудь передумаешь, ты знаешь, где я.",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "Временный режим",
     "blueTeam": "Синяя команда",
     "redTeam": "Красная команда",
-    "masteriesWrTitleRespectSize": "Мастерство | ВР в этом месяце",
+    "masteryWrTitleRespectSize": "Мастерство | ВР в этом месяце",
     "soloqTitleRespectSize": "Соло/Дуо ранг",
     "infoCardsGameInfoTitle": "Информация об игре",
     "infoCardsGameFooter": "Текущая продолжительность игры",
@@ -250,7 +250,7 @@
     "2HoursAgo": "2 часа назад",
     "1HourAgo": "1 час назад",
     "30MinutesAgo": "30 минут назад",
-    "fewsMinutesAgo": "несколько минут назад",
+    "fewMinutesAgo": "несколько минут назад",
     "infoCardsGameInfoOnTheGameOf": "Информация об игре",
     "infoCardsGameInfoAndOf": "и из",
     "account": "Аккаунт",
@@ -274,7 +274,7 @@
     "defineRankChannelMentionOfAChannelNeeded": "Вам нужно упомянуть канал вот так: `>define rankChannel #the-best-text-channel`",
     "defineRankChannelHelpMessage": "Назначить ранговый канал. Требуется разрешение на управление каналами.",
     "deleteRankChannelDoneMessage": "Ранговый канал был успешно удален.",
-    "deleteRankChannelNotSetted": "Ранговый Канал не назначен!",
+    "deleteRankChannelNotSet": "Ранговый Канал не назначен!",
     "deleteRankChannelHelpMessage": "Удалить Ранговый Канал. Требуется разрешение на управление каналом.",
     "rankChannelCorrectlyCreated": "Ранговый Канал успешно создан!",
     "rankChannelAlreadyExist": "Ранговый Канал уже существует!",
@@ -324,7 +324,7 @@
     "infopanelMessageReSendMessage": "Я воссоздаю информационную панель, пожалуйста, подождите...",
     "createLeaderboardExplainMessage": "Окей, давайте создадим таблицу лидеров. Какую цель вы хотите выбрать?",
     "createLeaderboardCancelMessage": "Создание таблицы лидеров отменено.",
-    "createLeaderboardTitleListeObjective": "Список целей :",
+    "createLeaderboardTitleListObjective": "Список целей :",
     "leaderboardObjectiveMasterPoint": "Очки Мастерства",
     "leaderboardObjectiveMasterPointSpecifiedChamp": "Очки Мастерства на %s",
     "leaderboardSpecificQueueRank": "Ранг конкретной очереди",
@@ -377,7 +377,7 @@
     "leaderboardObjectiveMasterPointSpecificChamp": "Очки Мастерства для конкретного чемпиона",
     "leaderboardObjectiveAverageKDASpecificChamp": "Средний УСС на конкретном чемпионе",
     "leaderboardObjectiveChannelSelectionTimeOut": "Вы слишком долго выбирали канал. Пожалуйста попробуйте ещё раз.",
-    "createLeaderboardNeedOneMentionnedChannel": "Пожалуйста отправьте мне упоминание канала где вы хотите разместить таблицу лидеров (напр. ``#leaderboard-channel``). Если вы хотите отменить создание таблицы лидеров,  пожалуйста отправьте``Stop``.",
+    "createLeaderboardNeedOneMentionedChannel": "Пожалуйста отправьте мне упоминание канала где вы хотите разместить таблицу лидеров (напр. ``#leaderboard-channel``). Если вы хотите отменить создание таблицы лидеров,  пожалуйста отправьте``Stop``.",
     "leaderboardDataNeededSpecificChamp": "Вам нужно указать мне чемпиона для этого типа таблицы лидеров. Пожалуйста выберите чемпиона отправив **его имя** или **его номер**. Если вы хотите отменить создание таблицы лидеров отправьте ``Stop``.",
     "leaderboardMissingPermission": "У меня нет нужных разрешений! Пожалуйста дайте мне право управлять каналами, реакциями и право на использование внешних ссылок.",
     "leaderboardSelectChannelLeaderboard": "Окей, теперь пожалуйста отправьте упоминание канала где вы хотите разместить таблицу лидеров (напр.``#leaderboard-channel``). Если вы хотите отменить создание таблицы лидеров, пожалуйста отправьте ``Stop``.",
