--- a/resources/languages/tr.json
+++ b/resources/languages/tr.json
@@ -6,23 +6,23 @@
     "helpMessageSendConfirmation": "Bütün komutları sana özel bir mesaj içerisinde yolladım.",
     "missingPermissionOwnerMessage": "Merhaba! Senin sunucunun bir botuyum %s.\nBilgilendirme kanalının düzgün çalışabilmesi için \"%s\" yetkisine sahip olmam gerekiyor. Eğer yardım ihtiyacın olursa destek sunucusuna katılabilirsin: %s\nBu mesaj her yeniden başlattığımda yollanacak. Şimdiden teşekkür ederim!",
     "aboutCommandHelp": "Bot hakkında bilgi ver.",
-    "aboutMessage": "Merhaba, ben KaluNight#0001 tarafından Java ile yazılmış bir  League of Legends botuyum. Size Discord kanalı üstünden arkadaşlarınızın oyunda olup olmadığını mevcut oyunları hakkında birçok bilgi vererek bilgilendirme kanalı oluşturmayı mümkün kılıyorum. Gelişimime Github sayfamdan katkıda bulunabilirsin [here](%s).\nResmi Discord Sunucusu: %s\nSunucuna beni eklemek için tıkla [here](%s)!\n\n*Kelebekleri, tek boynuzlu atları ve sonlu gerçeklikleri izlemeyi seviyorum!*\n\nZoe Riot Games tarafından desteklenmemektedir ve Riot Games'in görüşlerini ya da düşüncelerini yansıtmamakla birlikte hiçbirimiz League of Legends'ın geliştirilmesinde veya yönetiminde yer almamaktayız.",
+    "aboutMessage": "Merhaba, ben KaluNight#0001 tarafından Java ile yazılmış bir  League of Legends botuyum. Size Discord kanalı üstünden arkadaşlarınızın oyunda olup olmadığını mevcut oyunları hakkında birçok bilgi vererek bilgilendirme kanalı oluşturmayı mümkün kılıyorum. Gelişimime Github sayfamdan katkıda bulunabilirsin [here](%s).\nResmi Discord Sunucusu: %s\nSunucuna beni eklemek için tıkla [here](%s)!\n\n*Kelebekleri, tek boynuzlu atları ve sonlu gerçeklikleri izlemeyi seviyorum!*\n\nYuumi Riot Games tarafından desteklenmemektedir ve Riot Games'in görüşlerini ya da düşüncelerini yansıtmamakla birlikte hiçbirimiz League of Legends'ın geliştirilmesinde veya yönetiminde yer almamaktayız.",
     "configCommandHelp": "Sunucuyu ayarlamak için interaktif mesajı açınız.",
     "patchNotesCommandHelp": "Güncel sürümün yama notlarını yolla (yama notları ingilizcedir).",
     "refreshCommandHelp": "El ile sunucunun bilgilendirme kanalını yenile.",
     "resetCommandHelp": "Sunucunun güncel ayarlarını sıfırla.",
-    "resetWarningMessage": "**UYARI**: Bu komut sunucudaki botun ayarlarını sıfırlayacak! Discord ile ilgili içerikler silinmeyecek. (Zoe'nin mesajları ve yazı kanalları). Bunu yapmak istediğine emin misin?\n\nEğer bu gercekten yapmak istediğin şey ise şu şekilde yanıtla : **YES**.",
+    "resetWarningMessage": "**UYARI**: Bu komut sunucudaki botun ayarlarını sıfırlayacak! Discord ile ilgili içerikler silinmeyecek. (Yuumi'nin mesajları ve yazı kanalları). Bunu yapmak istediğine emin misin?\n\nEğer bu gercekten yapmak istediğin şey ise şu şekilde yanıtla : **YES**.",
     "resetConfirmationMessage": "Peki, haydi gidelim! Sıfırla ...",
     "resetDoneMessage": "Tamamdır, düzgün bir şekilde sıfırlanmıştır.",
     "resetCancelMessage": "Peki, bir şey yapmıyorum.",
     "resetTimeoutMessage": "Bir dakikadan fazladır beklemekteyim. Daha fazla beklemeyeceğim. Eğer sıfırlamak istiyorsan lütfen komudu yeniden yollayın `>reset` .",
-    "setupHelpMessage": "Zoe'yi nasıl kuracağım hakkında bilgi ver.",
+    "setupHelpMessage": "Yuumi'yi nasıl kuracağım hakkında bilgi ver.",
     "setupMessage": "Selam, göreceksin ki komutlarım çok da karmaşık değil. Her şeyden önce şunu bilmelisin ki tüm komutlarını şu komutlar yardımı ile görebilirsin `>help`.  veya spesifik bir komut hakkında yardım almak için`>commandName help` yazınız.\n\n1. Başlangıçta  `>create infoChannel KanalAdı`komudu ile bilgilendirme kanalı kur. Hatta varolan bir kanalını da `>define infoChannel #kanalınetiketi`komudu ile belirleyebilirsin.\n\n2. Sonrasında  `>create player @oyuncununetiketi (sunucutagi) (sihirdaradı)`komudu u kullanarak sisteme League of Legends oyuncularını ekle. İkinci hesabını `>add accountToPlayer @oyuncununetiketi (sunucutagi) (sihirdaradı)` komudunu kullanarak ekleyebilirsin.\n\n3.  Sunucunuzu istediğiniz gibi ayarlamak için `>config`  komudunu kullanabilirsiniz.\n\nİşte bu kadar, bilgilendirme panelin tamamlanmış bulunmakta. Eğer soruların, isteklerin ya da farklı görüşleri varsa kendini özgür hisset ve buraya gel : https://discord.gg/whc5PrC\n*Not: Bilgilendirme paneli her 3 dakikada bir yenilenir, bilgilendirme kartları ~20 saniye içinde yollanır.*",
     "addAccountHelpMessage": "Oyuncuyu belirtilen hesaba ekle.",
     "permissionNeededMessage": "Bunu yapmak için \"%s\" yetkisine ihtiyacın var.",
     "mentionNeededMessageWithUser": "Lütfen sunucunun bir üyesini etiketleyin. (örn. `>create player @%s (Bölge) (SihirdarAdı)`)",
     "permissionNeededUpdateOtherPlayer": "Kanal yönetimi yetkin yoksa başka bir oyuncuya bir hesap ekleyemezsin. Bunun için üzgünüm :/",
-    "mentionnedUserNotRegistered": "Etiketlenen kişi kayıtlı değil, lütfen önce onu şu komut ile kayıt edin `>create player`.",
+    "mentionedUserNotRegistered": "Etiketlenen kişi kayıtlı değil, lütfen önce onu şu komut ile kayıt edin `>create player`.",
     "addCommandMalformedWithoutRegionOption": "Komut sorunlu. Lütfen bu komuda uyun : `>add %s @DiscordOyuncuEtiketi (Bölge) (SihirdarAdı)`",
     "addCommandMalformedWithRegionOption": "Komut sorunlu. Lütfen bu komuda uyun : `>add %s @DiscordOyuncuEtiketi (Bölge) (SihirdarAdı)`\nEğer bölge ayarlanmamış ise varsayılan bölge kullanılacaktır (%s).",
     "regionTagInvalid": "Bu bölge etiketi geçerli değil. (Geçerli bölgeler: EUW, EUNE, NA, BR, JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Etiketlenen kişiyi belirtilen takıma ekle. Kanal yönetimi yetkisi gerektirir.",
     "mentionOfPlayerNeeded": "Lütfen kayıtlı bir oyuncu etiketleyiniz !",
     "mentionOfUserNeedToBeAPlayer": "Etiketlenen kişi bir oyuncu değil !",
-    "mentionnedPlayerIsAlreadyInATeam": "Etiketlenen kişi zaten bir takımda (%s) !",
+    "mentionedPlayerIsAlreadyInATeam": "Etiketlenen kişi zaten bir takımda (%s) !",
     "givenTeamNotExist": "Böyle bir takım yok ! (İp ucu: Takım adı şu şekilde yazılmalıdır : `>add playerToTeam @OyuncuEtiketi (TakımAdı)`)",
     "playerAddedInTheTeam": "Oyuncu eklendi !",
     "createInfoChannelHelpMessage": "Oyuncuların bilgilendirmelerini yollayabileceğim yeni bir bilgilendirme kanalı yaratın. Kanal yönetimi yetkisi gerektirir.",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "\"%s\" takımı oluşturuldu !",
     "registerCommandHelpMessage": "Kişiyi verilen bilgiler ile oyuncu ile kayıt et. Sadece **herkes sistemde kendisin ekleyip/çıkartabilir** komudu etkin olduğunda geçerlidir.",
     "registerCommandOptionRequired": "Bu komut sadece \"%s\" opsiyonu etkin olduğunda kullanılabilir.",
-    "registerCommandAlreadyInZoe": "Zaten sistem içerisindesin. Eğer başka bir lol hesabı eklemek istiyorsan lütfen şu komudu kullanınız `>add account`.",
+    "registerCommandAlreadyInYuumi": "Zaten sistem içerisindesin. Eğer başka bir lol hesabı eklemek istiyorsan lütfen şu komudu kullanınız `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "Bu komut hatalı. Lütfen şu komuda uyunuz : `>register (Bölge) (SihirdarAdı)`",
     "registerCommandMalformedWithRegionOption": "Bu komut hatalı. Lütfen şu komuda uyunuz : `>register (Bölge) (SihirdarAdı)`\nEğer bölge ayarlı değilse varsayılan bölge kullanılacaktır (%s).",
     "registerCommandDoneMessage": "Şu hesabınız eklendi \"%s\".",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "Belirli bir bilgilendirme kanalım yok ! Var olmayan bir şeyin tanımını kaldıramam ki :p",
     "undefineInfoChannelDoneMessage": "Bilgilendirme kanalının tanımını kaldırdım ! Benim yolladığım tüm mesajları da sildim.",
     "deleteInfoChannelHelpMessage": "Bilgilendirme kanalını yenilemeden sonra sil. Kanal yönetimi gerektirir.",
-    "deleteInfoChannelChannelNotSetted": "Bilgilendirme kanalı belirlenmemiş!",
+    "deleteInfoChannelChannelNotSet": "Bilgilendirme kanalı belirlenmemiş!",
     "deleteInfoChannelDeletedMissingPermission": "Bilgilendirme kanalı **SİSTEMDEN** silinmiştir ! Yazı kanalını silmeye yetkim yok!",
     "deleteInfoChannelDoneMessage": "Bilgilendirme kanalı silinmiştir !",
     "deletePlayerHelpMessage": "Bu oyuncuyu sil",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "\"%s\" hesabının bağlantısı %s kişisinden kaldırıldı.",
     "removePlayerToTeamHelpMessage": "Belirtilen kişiyi takımdan çıkart. Kanal yönetimi yetkisi gerektirir.",
     "removePlayerToTeamMissingMention": "Bir kişi etiketleyiniz !",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "Etiketlenen kişi kayıtlı bir oyuncu değil !",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "Etiketlenen kişi kayıtlı bir oyuncu değil !",
     "removePlayerToTeamNotInTheTeam": "Bu oyuncu bir takımda değil.",
     "removePlayerToTeamDoneMessage": "\"%s\" takımından %s çıkartıldı!",
     "showPlayerHelpMessage": "Sunucudaki bütün oyuncuları hesapları ile göster.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Ustalık puanı",
     "cleanChannelOptionDisable": "Devre dışı",
     "cleanChannelOptionDisableDesc": "Seçenek devre dışı",
-    "cleanChannelOptionZoeCommands": "Sadece Zoe komutlarını sil",
-    "cleanChannelOptionZoeCommandsDesc": "Bu bütün Zoe komutlarını kanaldan silecektir",
+    "cleanChannelOptionYuumiCommands": "Sadece Yuumi komutlarını sil",
+    "cleanChannelOptionYuumiCommandsDesc": "Bu bütün Yuumi komutlarını kanaldan silecektir",
     "cleanChannelOptionAll": "Tüm mesajları sil",
     "cleanChannelOptionAllDesc": "Bu tüm yollanmış mesajları kanaldan silecektir",
     "cleanChannelOptionDesc": "Komutların/mesajların otomatik bir şekilde silinebileceği temiz bir yazı kanalı oluşturun.",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "Seçenek zaten kapalı!",
     "cleanChannelOptionNowDisable": "Tamam ! Şu an şeçenek devre dışı, artık bu kanalda mesaj silmeyeceğim.",
     "cleanChannelOptionSendTextChannel": "Son bir adım ve tamamdır ! Şimdi lütfen **tanımlamak istediğiniz yazı kanalını etiketleyerek bir mesaj yollayın.**",
-    "cleanChannelOptionTopicChannelZoeCommands": "Buraya yollamış tüm Zoe komutları yollandıktan 3 saniye sonra silinecek.",
+    "cleanChannelOptionTopicChannelYuumiCommands": "Buraya yollamış tüm Yuumi komutları yollandıktan 3 saniye sonra silinecek.",
     "cleanChannelOptionTopicChannelAll": "Buraya yollamış tüm komutlar yollandıktan 3 saniye sonra silinecek.",
     "cleanChannelOptionCreatedDoneMessage": "Muhteşem ! \"clean-channel\" adında bir kanal oluşturdum. Bu kanalı istediğin gibi değiştirebilirsin. Bana bir yetki ver de içeride her şey yolunda gitsin.",
-    "cleanChannelOptionInfoMessageZoeCommands": "Bilgi : Bundan sonra Zoe komutları yollandıktan 3 saniye sonra silinecek.",
+    "cleanChannelOptionInfoMessageYuumiCommands": "Bilgi : Bundan sonra Yuumi komutları yollandıktan 3 saniye sonra silinecek.",
     "cleanChannelOptionInfoMessageAll": "Bilgi : Bundan sonra buraya yollanan tüm mesajlar 3 saniye sonra silinecek.",
-    "cleanChannelOptionSettedDoneMessage": "Muhteşem ! Kanal düzgün bir şekilde kuruldu. Lütfen tüm yetkilerimin olup olmadığını bir kontrol et (Mesajları Yönet, Mesajları Oku, Mesaj Geçmişini Oku).",
+    "cleanChannelOptionSetDoneMessage": "Muhteşem ! Kanal düzgün bir şekilde kuruldu. Lütfen tüm yetkilerimin olup olmadığını bir kontrol et (Mesajları Yönet, Mesajları Oku, Mesaj Geçmişini Oku).",
     "cleanChannelOptionSelectInfoChannel": "bilgilendirme kanalını seçtin, bu kurulumun gerçekleştirilmesi imkansız. Kurulum iptal edildi.",
     "cleanChannelOptionOneTextChannelRequired": "Hiç yazı kanalı etiketlemedin. Kurulum iptal edildi.",
     "cleanChannelOptionResponseTimeOut": "2 dakika bekleme süresi sona erdi. Eğer bunu kurmak istiyorsanız, lütfen komutu yeniden girin.",
@@ -164,8 +164,8 @@
     "regionOptionSelectionCanceledMessage": "Seçim iptal edildi",
     "roleOptionDescription": "Rolsüz oyunculara bilgilendirme kanalını gizle",
     "roleOptionPermissionNeeded": "Bu seçeneği aktifleştirmem için yönetim rollerine ihtiyacım var. Eğer bu seçeneği aktifleştirmek istiyorsanız lütfen bana bu yetkiyi verin.",
-    "roleOptionLongDesc": "Etkinleştirme seçeneği: **%s**\n\nBu seçeneği etkinleştirmek, \"Zoe-Player\" adlı bir rol oluşturacak ve kayıtlı tüm oyunculara atayacaktır. İstediğiniz gibi güncelleyebilirsiniz. Silinirse, seçenek otomatik olarak devre dışı bırakılır.\n\n:white_check_mark:: Bu seçeneği etkinleştir\n:x:: Etkinleştirmeyi iptal et",
-    "roleOptionLongDescDisable": "Devre dışı bırakmak istediğiniz seçenek : **%s**\n\nDevre dışı bırak, **Zoe-Player rolünü siler** ve herkes tarafından okunabilen infochannel'i yeniden oluşturur.\n\n:white_check_mark: : ayarı **devre dışı** bırak.\n:x: : Devre dışı bırakmayı iptal edin.",
+    "roleOptionLongDesc": "Etkinleştirme seçeneği: **%s**\n\nBu seçeneği etkinleştirmek, \"Yuumi-Player\" adlı bir rol oluşturacak ve kayıtlı tüm oyunculara atayacaktır. İstediğiniz gibi güncelleyebilirsiniz. Silinirse, seçenek otomatik olarak devre dışı bırakılır.\n\n:white_check_mark:: Bu seçeneği etkinleştir\n:x:: Etkinleştirmeyi iptal et",
+    "roleOptionLongDescDisable": "Devre dışı bırakmak istediğiniz seçenek : **%s**\n\nDevre dışı bırak, **Yuumi-Player rolünü siler** ve herkes tarafından okunabilen infochannel'i yeniden oluşturur.\n\n:white_check_mark: : ayarı **devre dışı** bırak.\n:x: : Devre dışı bırakmayı iptal edin.",
     "roleOptionActivateWaitMessage": "Doğru, bunu çabucak aktive edeceğim. 2 saniye bekleyin ...",
     "roleOptionDoneMessage": "Yapılandırma sona erdi! Şimdi sadece kayıtlı oyuncu infoChannel'i görebilir.",
     "roleOptionCancelMessage": "Eğer bir gün fikrinizi değiştirirseniz nerede olduğumu biliyorsun.",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "Geçici oyun modu",
     "blueTeam": "Mavi Takım",
     "redTeam": "Kırmızı Takım",
-    "masteriesWrTitleRespectSize": "Ustalık Puanı | Bu ay kazanma oranı",
+    "masteryWrTitleRespectSize": "Ustalık Puanı | Bu ay kazanma oranı",
     "soloqTitleRespectSize": "SoloQ Kümesi",
     "infoCardsGameInfoTitle": "Oyun bilgilendirmesi of",
     "infoCardsGameFooter": "Oyunun şu anki süresi",
@@ -250,14 +250,14 @@
     "2HoursAgo": "2 saat önce",
     "1HourAgo": "1 saat önce",
     "30MinutesAgo": "30 dakika önce",
-    "fewsMinutesAgo": "Birkaç dakika önce",
+    "fewMinutesAgo": "Birkaç dakika önce",
     "infoCardsGameInfoOnTheGameOf": "Oyununun bilgisi",
     "infoCardsGameInfoAndOf": "ve",
     "account": "Hesap",
     "firstGame": "İlk oyun",
     "nativeActualLanguage": "#MESSAGE FOR TRANSLATOR: Don't tranlate that, put instead the name of your language in your language#Turkish",
     "languageCommandInSelectionMenu": "Dil seçildi : **%s**",
-    "languageCommandHelp": "ZoeBotun dilini seçme komutu",
+    "languageCommandHelp": "YuumiBotun dilini seçme komutu",
     "addingSystemLanguageSelected": "Tamamdır, şuandan itibaren %s. konuşuyorum. (Her zaman şu komut ile dilimi değiştirebilirsin `>l`). Şimdi sunucu için varsayılan bir bölge seçelim:",
     "addingSystemRegionSelected": "Doğru, \"%s\" bölgesini tanımladınız. Şimdi size kullanımım hakkında bazı tavsiyeler vereceğim:",
     "addingSystemEndMessage": "Temel yapılandırma şimdi tamamlanmıştır. Umarım hizmetlerimin tadını çıkarırsınız: D",
@@ -313,7 +313,7 @@
     "defineRankChannelHelpMessage": "Sıralama kanalını tanımlayın. Kanal izini gerekli.",
     "deleteRankChannelDoneMessage": "Sıralama kanalı doğru bir şekilde silindi.",
     "deleteRankChannelDeletedMissingPermission": "Sıralama kanalı yalnızca **sistemin içinde** silindi! Metin kanalını silme hakkım yok!",
-    "deleteRankChannelNotSetted": "Sıralama kanalı tanımlanmadı!",
+    "deleteRankChannelNotSet": "Sıralama kanalı tanımlanmadı!",
     "deleteRankChannelHelpMessage": "Rank Kanalını sil.Kanal izini gerekli.",
     "rankChannelCorrectlyCreated": "Rank Kanalı başarıyla oluşturuldu !",
     "rankChannelAlreadyExist": "Rank Kanalı zaten mevcut !",
