--- a/resources/languages/fr.json
+++ b/resources/languages/fr.json
@@ -5,24 +5,24 @@
     "endHelpMessage": "Pour avoir une aide supplémentaire, vous pouvez aussi rejoindre notre serveur officiel :",
     "helpMessageSendConfirmation": "Je vous ai envoyé toutes les commandes en message privé.",
     "missingPermissionOwnerMessage": "Hello ! Je suis un bot dans votre serveur %s\nJ'ai besoin d'avoir la permission \"%s\" dans le salon d'information que vous avez définit pour fonctionner correctement. Si vous avez besoin d'aide vous pouvez rejoindre le serveur de support ici : %s\nCe message sera renvoyé à chaque fois que je redémarre. Merci d'avance !",
-    "aboutCommandHelp": "Donne des informations relatives à Zoe.",
-    "aboutMessage": "Hello, je suis un bot League of Legends écrit en Java par KaluNight#0001. J'offre la possibilité de créer un panneau d'information qui vous permet de savoir si vos amis sont en partie directement depuis Discord. Je fournis également et automatiquement des statistiques sur les parties en cours. Vous pouvez contribuer à mon développement sur Github [ici](%s).\nServeur Discord officiel : %s\nPour m'ajouter dans votre serveur cliquer [ici](%s).\n\n*J'aime les papillons, les licornes et regarder mourir d'autres réalités !*\n\nZoe n'est pas approuvé par Riot Games et ne reflètent en aucun cas les opinions de Riot Games ou de quiconque officiellement impliqué dans le développement ou la gestion de League of Legends.",
+    "aboutCommandHelp": "Donne des informations relatives à Yuumi.",
+    "aboutMessage": "Hello, je suis un bot League of Legends écrit en Java par KaluNight#0001. J'offre la possibilité de créer un panneau d'information qui vous permet de savoir si vos amis sont en partie directement depuis Discord. Je fournis également et automatiquement des statistiques sur les parties en cours. Vous pouvez contribuer à mon développement sur Github [ici](%s).\nServeur Discord officiel : %s\nPour m'ajouter dans votre serveur cliquer [ici](%s).\n\n*J'aime les papillons, les licornes et regarder mourir d'autres réalités !*\n\nYuumi n'est pas approuvé par Riot Games et ne reflètent en aucun cas les opinions de Riot Games ou de quiconque officiellement impliqué dans le développement ou la gestion de League of Legends.",
     "configCommandHelp": "Ouvre un menu interactif pour configurer le serveur.",
     "patchNotesCommandHelp": "Envoie la note de mise à jour de la version actuel du bot (en anglais).",
     "refreshCommandHelp": "Rafraîchi manuellement le canal d'information du serveur.",
     "resetCommandHelp": "Réinitialisation de la configuration du serveur.",
-    "resetWarningMessage": "**ATTENTION**  : Cette commande va réinitialiser la configuration du bot pour ce serveur ! Les éléments reliées à Discord ne vont pas être supprimées (les messages de Zoe et les salons textuels). Êtes-vous sûr de faire ça ?\n\nSi c'est vraiment ce que vous voulez faire, répondez  : **YES**.",
+    "resetWarningMessage": "**ATTENTION**  : Cette commande va réinitialiser la configuration du bot pour ce serveur ! Les éléments reliées à Discord ne vont pas être supprimées (les messages de Yuumi et les salons textuels). Êtes-vous sûr de faire ça ?\n\nSi c'est vraiment ce que vous voulez faire, répondez  : **YES**.",
     "resetConfirmationMessage": "Allez, c'est parti ! Réinitialisation ...",
     "resetDoneMessage": "C'est fait, j'ai été réinitialisée correctement.",
     "resetCancelMessage": "D’accord, alors je ne fais rien.",
     "resetTimeoutMessage": "J'attends depuis plus d'une minute. Je n'attendrais pas plus. Merci de renvoyer la commande `>reset` si vous voulez que je me réinitialise.",
-    "setupHelpMessage": "Donne des infos sur comment mettre Zoe en place.",
+    "setupHelpMessage": "Donne des infos sur comment mettre Yuumi en place.",
     "setupMessage": "Salut ! Tu verras, mes commandes ne sont vraiment pas compliquées. Premièrement, sache que tu peux voir toute mes commandes à l'aide de la commande `>help`. Entre `>nomDeLaCommande help` pour obtenir de l'aide par rapport à une commande spécifique. Assure-toi que tu aies aussi les droits de permissions sur la gestion des salons (Permission Gérer les salons).\n\n1. Pour commencer, créez un canal d'information `>create infoChannel nomSalon`. Vous pouvez aussi directement le définir à un salon déjà existant avec la commande `>define infoChannel #mentionDuSalon`.\n2. Ensuite, ajoutez un joueur dans le système en utilisant la commande `>create player @mentionDuJoueur (ServeurTag) (Pseudo)`.  Vous pouvez ajouter un deuxième compte au joueur avec la commande `>add accountToPlayer @mentionDuJoueur (ServeurTag) (Pseudo)`.\n3. Utilisez la commande `>config` pour configurer le serveur comme vous le voulez.\n\nC'est tout ! Le système a bien été configuré. Si vous avez des questions, suggestions ou vous souhaitez juste discuter, vous pouvez rejoindre le Serveur Discord officiel ici : https://discord.gg/whc5PrC\n\n*À noter : Le panneau d'information s'actualise tous les 5 minutes, les cartes d'information seront envoyées en ~20 sec.*",
     "addAccountHelpMessage": "Ajoute le joueur mentionné au compte donné.",
     "permissionNeededMessage": "Vous avez besoin de la permission \"%s\" pour faire ça.",
     "mentionNeededMessageWithUser": "Vous devez mentionner 1 membre du server (e.g '>create player @%s (Région) (NomDInvocateur)')",
     "permissionNeededUpdateOtherPlayer": "Vous ne pouvez pas ajouter un compte à un autre joueur que vous-même si vous n'avez pas les permissions requises. Désolé à propos de cela... :/",
-    "mentionnedUserNotRegistered": "L'utilisateur mentionné n'est pas enregistré, veuillez d'abord le créer avec la commande `>create player`.",
+    "mentionedUserNotRegistered": "L'utilisateur mentionné n'est pas enregistré, veuillez d'abord le créer avec la commande `>create player`.",
     "addCommandMalformedWithoutRegionOption": "La commande est mal formée. Merci de respecter le modèle : `>add %s @DiscordPlayerMention (Region) (SummonerName)`",
     "addCommandMalformedWithRegionOption": "La commande est mal formée. Merci de respecter le modèle : `>add %s @DiscordPlayerMention (Region) (SummonerName)`\nSi la région du serveur n'est pas définie, la région (%s) sera utilisée par défaut.",
     "regionTagInvalid": "Le nom du serveur est invalide. (Nom valide : EUW, EUNE, NA, BR, JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Ajoute le joueur mentionné dans l'équipe fourni. Vous devez avoir la permission \"Gérer les canaux\".",
     "mentionOfPlayerNeeded": "Veuillez mentionner un joueur enregistré !",
     "mentionOfUserNeedToBeAPlayer": "L'utilisateur mentionné n'est pas un joueur !",
-    "mentionnedPlayerIsAlreadyInATeam": "Le joueur mentionné a déjà une autre équipe (%s) !",
+    "mentionedPlayerIsAlreadyInATeam": "Le joueur mentionné a déjà une autre équipe (%s) !",
     "givenTeamNotExist": "L'équipe donné n'existe pas ! (Aide : Le nom d'équipe doit être donné dans des parenthèses `>add playerToTeam @mentionJoueur (Nom d'équipe)`)",
     "playerAddedInTheTeam": "Le joueur a été ajouté !",
     "createInfoChannelHelpMessage": "Crée un nouveau canal d'information où je pourrais envoyer des informations sur les joueurs. La permission \"Gérer les salons\" est nécessaire.",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "L'équipe \"%s\" a été créé !",
     "registerCommandHelpMessage": "Enregistre l'envoyeur de la commande en tant que joueur avec les informations fournis. Utilisable uniquement quand l'option **Tout le monde peut s'ajouter/se supprimer lui même du système** est activé.",
     "registerCommandOptionRequired": "Cette commande peux uniquement être utilisé quand l'option \"%s\" est activée.",
-    "registerCommandAlreadyInZoe": "Vous êtes déjà enregistré dans le système. Si vous souhaitez ajouter un autre compte LoL, merci d'utiliser la commande `>add account`.",
+    "registerCommandAlreadyInYuumi": "Vous êtes déjà enregistré dans le système. Si vous souhaitez ajouter un autre compte LoL, merci d'utiliser la commande `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "La commande est mal formé. Merci de respecter le format : `>register (Serveur) (Nom d'invocateur)`",
     "registerCommandMalformedWithRegionOption": "La commande est mal formé. Merci de respecter le format : `>register (Serveur) (Nom D'invocateur)`\nSi le serveur n'est pas définit, la région par défaut sera utilisée (%s).",
     "registerCommandDoneMessage": "Vous vous êtes ajouté avec le compte \"%s\".",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "Je n'ai pas de canal d'information assigné ! Je ne peux pas indéfinir quelque chose qui n'existe pas :p",
     "undefineInfoChannelDoneMessage": "J'ai délié le canal d'information ! J'ai supprimé tous les messages reliés à mes activités.",
     "deleteInfoChannelHelpMessage": "Supprime le canal d'information après l'actualisation. La permission de gérer les salons est nécessaire.",
-    "deleteInfoChannelChannelNotSetted": "Le canal d'information n'est pas définie !",
+    "deleteInfoChannelChannelNotSet": "Le canal d'information n'est pas définie !",
     "deleteInfoChannelDeletedMissingPermission": "Le canal d'information a été supprimé **DANS LE SYSTÈME** ! Je n'ai pas la permissions de supprimer le canal textuel !",
     "deleteInfoChannelDoneMessage": "Le canal d'information a été supprimé !",
     "deletePlayerHelpMessage": "Supprime le joueur donné",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "Le compte \"%s\" a été délié au joueur %s.",
     "removePlayerToTeamHelpMessage": "Supprime le joueur fourni de son équipe. La permission de gérer les salons est nécessaire.",
     "removePlayerToTeamMissingMention": "Merci de mentionné un joueur !",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "La personne mentionnée n'est pas un joueur enregistré !",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "La personne mentionnée n'est pas un joueur enregistré !",
     "removePlayerToTeamNotInTheTeam": "Ce joueur n'est pas dans une équipe.",
     "removePlayerToTeamDoneMessage": "%s a été supprimé de l'équipe \"%s\" !",
     "showPlayerHelpMessage": "Montre tous les joueurs et leurs comptes sur le serveur.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Points de maîtrises",
     "cleanChannelOptionDisable": "Désactivé",
     "cleanChannelOptionDisableDesc": "Option désactivé",
-    "cleanChannelOptionZoeCommands": "Supprime seulement les commandes de Zoe",
-    "cleanChannelOptionZoeCommandsDesc": "Cela va supprimer toutes les nouvelles commandes de Zoé dans ce salon",
+    "cleanChannelOptionYuumiCommands": "Supprime seulement les commandes de Yuumi",
+    "cleanChannelOptionYuumiCommandsDesc": "Cela va supprimer toutes les nouvelles commandes de Zoé dans ce salon",
     "cleanChannelOptionAll": "Supprime tous les messages",
     "cleanChannelOptionAllDesc": "Cela va supprimer tous les nouveaux messages envoyés dans ce salon",
     "cleanChannelOptionDesc": "Crée un salon textuel vide où les messages/commandes sont automatiquement supprimées.",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "L'option est déjà désactivée !",
     "cleanChannelOptionNowDisable": "Okay ! L'option est maintenant désactivée, je n'effacerai plus les messages dans le salon propre.",
     "cleanChannelOptionSendTextChannel": "Encore une étape et nous sommes bons ! Maintenant, merci **d'envoyer un message avec en mention le nom du canal textuel que vous voulez définir**",
-    "cleanChannelOptionTopicChannelZoeCommands": "Toutes les commandes de Zoe envoyées ici seront supprimer après trois secondes.",
+    "cleanChannelOptionTopicChannelYuumiCommands": "Toutes les commandes de Yuumi envoyées ici seront supprimer après trois secondes.",
     "cleanChannelOptionTopicChannelAll": "Tous les messages envoyés ici seront supprimés après 3 secondes.",
     "cleanChannelOptionCreatedDoneMessage": "Parfait ! J'ai crée un salon avec le nom \"salon propre\". Vous pouvez changer l'option de ce salon comme vous le voulez. Laissez-moi juste les permissions à l'intérieur et tous va fonctionner.",
-    "cleanChannelOptionInfoMessageZoeCommands": "Info : A partir de maintenant, les commandes envoyées par Zoe ici seront supprimées après 3 secondes.",
+    "cleanChannelOptionInfoMessageYuumiCommands": "Info : A partir de maintenant, les commandes envoyées par Yuumi ici seront supprimées après 3 secondes.",
     "cleanChannelOptionInfoMessageAll": "Info : A partir de maintenant, tous les messages envoyés ici seront supprimés après 3 secondes.",
-    "cleanChannelOptionSettedDoneMessage": "Parfait ! Le salon a été correctement défini. Merci de vérifier que j'ai bien toutes les permissions nécessaires dedans (Gérer les messages, lire les messages, lire l'historique).",
+    "cleanChannelOptionSetDoneMessage": "Parfait ! Le salon a été correctement défini. Merci de vérifier que j'ai bien toutes les permissions nécessaires dedans (Gérer les messages, lire les messages, lire l'historique).",
     "cleanChannelOptionSelectInfoChannel": "Vous avez choisi le salon d'information, cette config est impossible à mettre en place. La configuration a été annulée.",
     "cleanChannelOptionOneTextChannelRequired": "Vous n'avez pas mentionné un salon textuelle. La configuration a été annulée.",
     "cleanChannelOptionResponseTimeOut": "L'attente de deux minutes est passé. Merci de refaire la commande si vous voulez configurer cette option.",
@@ -164,8 +164,8 @@
     "regionOptionSelectionCanceledMessage": "Sélection annulée",
     "roleOptionDescription": "Cache le canal d'information aux personnes pas enregistré à l'aide d'un rôle",
     "roleOptionPermissionNeeded": "J'ai besoin de la permission de gérer les rôles pour activer cette option. Merci de me donner cette permission si vous voulez activer cette option.",
-    "roleOptionLongDesc": "Option en activation : **%s**\n\nActiver cette option va créer un rôle nommé \"Zoe-Player\" et va l'assigner à tous les joueurs enregistrés. Vous pouvez le modifier comme vous le souhaitez. Si vous le supprimez, l'option sera automatiquement désactivé.\n\n:white_check_mark: : Activer cette option \n:x: : Annuler l'activation",
-    "roleOptionLongDescDisable": "Option que vous souhaitez désactiver : **%s**\n\nDésactivé cette option va **supprimé le rôle Zoe-Player** et va de nouveau rendre le canal d'information lisible par tous le monde.\n\n:white_check_mark: : **Désactive** l'option.\n:x: : Annule la désactivation.",
+    "roleOptionLongDesc": "Option en activation : **%s**\n\nActiver cette option va créer un rôle nommé \"Yuumi-Player\" et va l'assigner à tous les joueurs enregistrés. Vous pouvez le modifier comme vous le souhaitez. Si vous le supprimez, l'option sera automatiquement désactivé.\n\n:white_check_mark: : Activer cette option \n:x: : Annuler l'activation",
+    "roleOptionLongDescDisable": "Option que vous souhaitez désactiver : **%s**\n\nDésactivé cette option va **supprimé le rôle Yuumi-Player** et va de nouveau rendre le canal d'information lisible par tous le monde.\n\n:white_check_mark: : **Désactive** l'option.\n:x: : Annule la désactivation.",
     "roleOptionActivateWaitMessage": "Très bien, je vais activer cela rapidement. Attendez 2 secondes…",
     "roleOptionDoneMessage": "La configuration est terminé ! Maintenant seulement les joueurs enregistrés peuvent voir le canal d'information.",
     "roleOptionCancelMessage": "Bon, si vous changez un jour d'avis, vous savez où me trouver.",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "Mode temporaire",
     "blueTeam": "Équipe Bleu",
     "redTeam": "Équipe Rouge",
-    "masteriesWrTitleRespectSize": "Maîtrise | WR ce mois",
+    "masteryWrTitleRespectSize": "Maîtrise | WR ce mois",
     "soloqTitleRespectSize": "Rank Solo/Duo",
     "infoCardsGameInfoTitle": "Information sur la partie de",
     "infoCardsGameFooter": "Temps actuel de la partie",
@@ -250,13 +250,13 @@
     "2HoursAgo": "Il'y a 2 heures",
     "1HourAgo": "Il y a 1 heure",
     "30MinutesAgo": "Il'y a 30 minutes",
-    "fewsMinutesAgo": "Il'y a quelques minutes",
+    "fewMinutesAgo": "Il'y a quelques minutes",
     "infoCardsGameInfoOnTheGameOf": "Info sur le match de",
     "infoCardsGameInfoAndOf": "et de",
     "account": "Compte",
     "firstGame": "Première partie",
     "nativeActualLanguage": "Français",
-    "languageCommandHelp": "Commande pour sélectionner le langage de Zoe",
+    "languageCommandHelp": "Commande pour sélectionner le langage de Yuumi",
     "languageCommandInSelectionMenu": "Language sélectionné : **%s**",
     "addingSystemRegionSelected": "Parfait, vous avez définit la région \"%s\". Voici maintenant quelques conseils sur mon utilisation :",
     "addingSystemEndMessage": "La configuration de base est maintenant complète. J'espère que vous apprécierez mes services :D",
@@ -294,7 +294,7 @@
     "defineRankChannelHelpMessage": "Définit le canal de classé. La permission de gérer les salons est nécessaire.",
     "deleteRankChannelDoneMessage": "La canal de classé a bien été supprimé.",
     "deleteRankChannelDeletedMissingPermission": "Le canal de classé a été supprimé **DANS LE SYSTÈME** ! Je n'ai pas la permissions de supprimer le canal textuel !",
-    "deleteRankChannelNotSetted": "Le canal de classé n'est pas défini !",
+    "deleteRankChannelNotSet": "Le canal de classé n'est pas défini !",
     "deleteRankChannelHelpMessage": "Supprime le canal de classé. La permission de gérer les salons est nécessaire.",
     "rankChannelCorrectlyCreated": "La canal de classé a bien été créé !",
     "challenger": "Challenger",
@@ -353,7 +353,7 @@
     "leaderboardSuccessfullyCreated": "Le classement à bien été créé ! Je le mettrai à jour chaque heure.",
     "leaderboardMissingPermission": "Je n'ai pas toutes les permissions nécessaire ! Merci de me donner le droit de gérer les salons, de géré les emotes et d'utiliser des liens externes.",
     "leaderboardObjectiveBaseMessage": "**Chargement du classement …**",
-    "createLeaderboardNeedOneMentionnedChannel": "Merci de m'envoyer la mention du salon où vous souhaitez que le classement soit envoyé (ex.``#salon-des-classements``). Si vous souhaitez annuler la création du classement, merci d'envoyer ``Stop``.",
+    "createLeaderboardNeedOneMentionedChannel": "Merci de m'envoyer la mention du salon où vous souhaitez que le classement soit envoyé (ex.``#salon-des-classements``). Si vous souhaitez annuler la création du classement, merci d'envoyer ``Stop``.",
     "leaderboardRefreshMessage": "Mis à jour toutes les heures",
     "pointsShort": "pts",
     "leaderboardObjectiveMasterPointTitle": "Classement du total des points de maîtrises",
@@ -369,7 +369,7 @@
     "leaderboardObjectiveMasterPointSpecifiedChamp": "Point de maîtrise avec %s",
     "leaderboardObjectiveMasterPointSpecificChamp": "Point de maîtrise pour un champion spécifique",
     "leaderboardObjectiveMasterPoint": "Point de maîtrises",
-    "createLeaderboardTitleListeObjective": "Liste des objectifs :",
+    "createLeaderboardTitleListObjective": "Liste des objectifs :",
     "createLeaderboardCancelMessage": "Création du classement annulé.",
     "createLeaderboardExplainMessage": "Ok, créons un classement ! Quel objectif souhaitez-vous cibler ?",
     "createLeaderboardHelpMessage": "Démarre l'outil de création de classement. La permission de gérer les salons est nécessaire.",
