--- a/resources/languages/ko.json
+++ b/resources/languages/ko.json
@@ -22,7 +22,7 @@
     "permissionNeededMessage": "",
     "mentionNeededMessageWithUser": "",
     "permissionNeededUpdateOtherPlayer": "",
-    "mentionnedUserNotRegistered": "",
+    "mentionedUserNotRegistered": "",
     "addCommandMalformedWithoutRegionOption": "",
     "addCommandMalformedWithRegionOption": "",
     "regionTagInvalid": "",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "",
     "mentionOfPlayerNeeded": "",
     "mentionOfUserNeedToBeAPlayer": "",
-    "mentionnedPlayerIsAlreadyInATeam": "",
+    "mentionedPlayerIsAlreadyInATeam": "",
     "givenTeamNotExist": "",
     "playerAddedInTheTeam": "",
     "createInfoChannelHelpMessage": "",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "",
     "registerCommandHelpMessage": "",
     "registerCommandOptionRequired": "",
-    "registerCommandAlreadyInZoe": "",
+    "registerCommandAlreadyInYuumi": "",
     "registerCommandMalformedWithoutRegionOption": "",
     "registerCommandMalformedWithRegionOption": "",
     "registerCommandDoneMessage": "",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "",
     "undefineInfoChannelDoneMessage": "",
     "deleteInfoChannelHelpMessage": "",
-    "deleteInfoChannelChannelNotSetted": "",
+    "deleteInfoChannelChannelNotSet": "",
     "deleteInfoChannelDeletedMissingPermission": "",
     "deleteInfoChannelDoneMessage": "",
     "deletePlayerHelpMessage": "",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "",
     "removePlayerToTeamHelpMessage": "",
     "removePlayerToTeamMissingMention": "",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "",
     "removePlayerToTeamNotInTheTeam": "",
     "removePlayerToTeamDoneMessage": "",
     "showPlayerHelpMessage": "",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "",
     "cleanChannelOptionDisable": "",
     "cleanChannelOptionDisableDesc": "",
-    "cleanChannelOptionZoeCommands": "",
-    "cleanChannelOptionZoeCommandsDesc": "",
+    "cleanChannelOptionYuumiCommands": "",
+    "cleanChannelOptionYuumiCommandsDesc": "",
     "cleanChannelOptionAll": "",
     "cleanChannelOptionAllDesc": "",
     "cleanChannelOptionDesc": "",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "",
     "cleanChannelOptionNowDisable": "",
     "cleanChannelOptionSendTextChannel": "",
-    "cleanChannelOptionTopicChannelZoeCommands": "",
+    "cleanChannelOptionTopicChannelYuumiCommands": "",
     "cleanChannelOptionTopicChannelAll": "",
     "cleanChannelOptionCreatedDoneMessage": "",
-    "cleanChannelOptionInfoMessageZoeCommands": "",
+    "cleanChannelOptionInfoMessageYuumiCommands": "",
     "cleanChannelOptionInfoMessageAll": "",
-    "cleanChannelOptionSettedDoneMessage": "",
+    "cleanChannelOptionSetDoneMessage": "",
     "cleanChannelOptionSelectInfoChannel": "",
     "cleanChannelOptionOneTextChannelRequired": "",
     "cleanChannelOptionResponseTimeOut": "",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "",
     "blueTeam": "",
     "redTeam": "",
-    "masteriesWrTitleRespectSize": "",
+    "masteryWrTitleRespectSize": "",
     "soloqTitleRespectSize": "",
     "infoCardsGameInfoTitle": "",
     "infoCardsGameFooter": "",
@@ -250,7 +250,7 @@
     "2HoursAgo": "",
     "1HourAgo": "",
     "30MinutesAgo": "",
-    "fewsMinutesAgo": "",
+    "fewMinutesAgo": "",
     "infoCardsGameInfoOnTheGameOf": "",
     "infoCardsGameInfoAndOf": "",
     "account": "",
