--- a/resources/languages/pt.json
+++ b/resources/languages/pt.json
@@ -6,23 +6,23 @@
     "helpMessageSendConfirmation": "Enviei todos os comandos em uma mensagem privada.",
     "missingPermissionOwnerMessage": "Olá! Eu sou um bot do seu servidor %s.\nEu preciso da permissão \"%s\" no canal de informação para funcionar corretamente. Se precisar de ajuda, você pode ingressar no servidor de ajuda aqui: %s\nEsta mensagem será enviada sempre que eu reiniciar. Agradeço antecipadamente !",
     "aboutCommandHelp": "Informações sobre o bot.",
-    "aboutMessage": "Olá, sou um bot do League Of Legends escrito em Java por KaluNight#0001. Ofereço a possibilidade de criar um painel de informações que permita que você saiba se seus amigos estão no jogo diretamente em um canal do Discord, fornecendo várias informações sobre os jogos atuais. Você pode contribuir para o meu desenvolvimento no meu Github [here](%s).\nDiscórd oficial do servidor: %s\nPara me adicionar ao seu servidor, clique em [here](%s)!\n\n*Eu gosto de borboletas, unicórnios e assistindo o fim de finitas realidades!*\n\nZoe não é recomendada pela Riot Games e não reflete as opiniões ou opiniões da Riot Games ou de qualquer pessoa oficialmente envolvida na produção ou gerenciamento de League of Legends.",
+    "aboutMessage": "Olá, sou um bot do League Of Legends escrito em Java por KaluNight#0001. Ofereço a possibilidade de criar um painel de informações que permita que você saiba se seus amigos estão no jogo diretamente em um canal do Discord, fornecendo várias informações sobre os jogos atuais. Você pode contribuir para o meu desenvolvimento no meu Github [here](%s).\nDiscórd oficial do servidor: %s\nPara me adicionar ao seu servidor, clique em [here](%s)!\n\n*Eu gosto de borboletas, unicórnios e assistindo o fim de finitas realidades!*\n\nYuumi não é recomendada pela Riot Games e não reflete as opiniões ou opiniões da Riot Games ou de qualquer pessoa oficialmente envolvida na produção ou gerenciamento de League of Legends.",
     "configCommandHelp": "Abra uma mensagem interativa para configurar o servidor.",
     "patchNotesCommandHelp": "Enviar o patch note da atual versão (as notas do patch estão em inglês).",
     "refreshCommandHelp": "Atualize manualmente o painel de informações do servidor.",
     "resetCommandHelp": "Resetar as atuais configurações do server.",
-    "resetWarningMessage": "**AVISO**: Este comando redefinirá as configurações do bot para este servidor! Coisas relacionadas ao discord não serão excluídas (mensagens e canais de texto de Zoe). Você tem certeza de que você quer fazer isso?\n\nSe é realmente o que você quer fazer, responda: **YES**.",
+    "resetWarningMessage": "**AVISO**: Este comando redefinirá as configurações do bot para este servidor! Coisas relacionadas ao discord não serão excluídas (mensagens e canais de texto de Yuumi). Você tem certeza de que você quer fazer isso?\n\nSe é realmente o que você quer fazer, responda: **YES**.",
     "resetConfirmationMessage": "Certo, vamos lá! Resetando...",
     "resetDoneMessage": "Pronto, fui redefinido corretamente.",
     "resetCancelMessage": "Tudo bem, então eu não irei fazer nada.",
     "resetTimeoutMessage": "Estou esperando há mais de um minuto. Não vou esperar mais. Por favor, reenvie o comando `>reset` se você quiser me redefinir.",
-    "setupHelpMessage": "Dar informações sobre como configurar o Bot Zoe.",
+    "setupHelpMessage": "Dar informações sobre como configurar o Bot Yuumi.",
     "setupMessage": "Oi, você verá que meus comandos não são realmente complicados. Antes de tudo, saiba que você pode ver todos os meus comandos com uma ajuda com o comando `>help`. Digite ``>commandName help`` para obter ajuda sobre um comando específico. Verifique também se você tem o direito de gerenciar os canais (permissão Gerenciar canais).\n\n1. Para começar, crie um canal de informações com o comando `>create infoChannel channelName`. Você também pode definir um existente com o comando `>define infoChannel #Mençaoaojogador`\n\n2. Em seguida, adicione os jogadores do League of Legends ao sistema usando o comando `>create player @Mençaoaojogador (servidor) (SummonerName)`. Você pode adicionar uma conta secundária a um jogador com o comando `>add accountToPlayer @Mençaoaojogador (Servidor) (SummonerName)`\n\n3. Você pode usar o comando `>config` para configurar seu servidor como desejar.\n\nÉ isso aí, seu sistema de informação foi bem implementado. Se você tiver dúvidas, solicitações de recursos ou apenas discutir, sinta-se à vontade para vir aqui: https://discord.gg/whc5PrC\n*Nota: O painel de informações é atualizado a cada 5 minutos, cartões enviados em ~ 20 segundos.*",
     "addAccountHelpMessage": "Adicione ao jogador mencionado a conta fornecida.",
     "permissionNeededMessage": "Você precisa da permissão \"%s\" para fazer isso.",
     "mentionNeededMessageWithUser": "Mencione um membro do servidor (por exemplo, `>create player @%s (Região) (SummonerName)`)",
     "permissionNeededUpdateOtherPlayer": "Você não pode adicionar uma conta a outro jogador além de você, se não tiver a permissão de gerenciar o canal. Me desculpe por isso :/",
-    "mentionnedUserNotRegistered": "O usuário mencionado não está registrado, crie-o primeiro com o comando `>create player`.",
+    "mentionedUserNotRegistered": "O usuário mencionado não está registrado, crie-o primeiro com o comando `>create player`.",
     "addCommandMalformedWithoutRegionOption": "O comando está incorreto. Por favor, respeite este padrão: `>add %s @MenaçaoaoPlayer (Regão) (SummonerName)`",
     "addCommandMalformedWithRegionOption": "O comando está incorreto. Por favor, respeite este padrão: `>add %s @PlayerMençao (Região) (SummonerName)`\nSe a região não estiver definida, a região padrão será usada (%s).",
     "regionTagInvalid": "A etiqueta da região é inválida. (Etiqueta válida: EUW, EUNE, NA, BR,  JP, KR, LAN, LAS, OCE, RU, TR)",
@@ -36,7 +36,7 @@
     "addPlayerToTeamCommandHelp": "Adicione o jogador mencionado ao time em questão. É necessário ter permissão para gerenciar o canal.",
     "mentionOfPlayerNeeded": "Por favor mencione um jogador registrado!",
     "mentionOfUserNeedToBeAPlayer": "O usuário mencionado não é um jogador!",
-    "mentionnedPlayerIsAlreadyInATeam": "O jogador mencionado já tem outro time (%s) !",
+    "mentionedPlayerIsAlreadyInATeam": "O jogador mencionado já tem outro time (%s) !",
     "givenTeamNotExist": "O time em questão não existe! (Dica: o nome da equipe precisa estar entre parênteses como este: `>add playerToTeam @MençãoaoPlayer (NomeDoTime)`)",
     "playerAddedInTheTeam": "O jogador foi adicionado !",
     "createInfoChannelHelpMessage": "Crie um novo canal de texto, onde eu possa enviar informações sobre jogadores. É necessário ter permissão para gerenciar o canal.",
@@ -60,7 +60,7 @@
     "createTeamDoneMessage": "A equipe \"%s\" foi criada!",
     "registerCommandHelpMessage": "Registre o escritor como jogador com as informações fornecidas. Ative somente quando a opção **Todos puderem adicionar / excluir no sistema** estiver ativada.",
     "registerCommandOptionRequired": "Este comando pode ser usado apenas quando a opção \"%s\" está ativada.",
-    "registerCommandAlreadyInZoe": "Você já está no sistema. Se você deseja adicionar outra conta lol, use o comando `>add account`.",
+    "registerCommandAlreadyInYuumi": "Você já está no sistema. Se você deseja adicionar outra conta lol, use o comando `>add account`.",
     "registerCommandMalformedWithoutRegionOption": "O comando está incorreto. Por favor, respeite este padrão: `>register (Region) (SummonerName)`",
     "registerCommandMalformedWithRegionOption": "O comando está incorreto. Por favor, respeite este padrão: `>register (Region) (SummonerName)`\nSe a região não estiver definida, a região padrão será usada (%s).",
     "registerCommandDoneMessage": "Você foi adicionado à conta \"%s\".",
@@ -76,7 +76,7 @@
     "undefineInfoChannelMissingChannel": "Não tenho canal de informações cadastrado! Não consigo definir algo que não existe: p",
     "undefineInfoChannelDoneMessage": "Anulei a definição do canal de texto! Excluí todas as mensagens relacionadas à minha atividade.",
     "deleteInfoChannelHelpMessage": "Exclua o canal de texto após a atualização. É necessário ter permissão para gerenciar o canal.",
-    "deleteInfoChannelChannelNotSetted": "O canal de texto não está definido!",
+    "deleteInfoChannelChannelNotSet": "O canal de texto não está definido!",
     "deleteInfoChannelDeletedMissingPermission": "O canal de texto foi excluído **DENTRO DO SISTEMA**! Não tenho permissão para excluir o canal de texto!",
     "deleteInfoChannelDoneMessage": "O canal de texto foi excluído!",
     "deletePlayerHelpMessage": "Excluir o jogador especificado",
@@ -97,7 +97,7 @@
     "removeAccountDoneMessage": "A conta \"%s\" foi desvinculada do jogador %s.",
     "removePlayerToTeamHelpMessage": "Exclua o jogador especificado de seu time. É necessário ter permissão para gerenciar o canal.",
     "removePlayerToTeamMissingMention": "Por favor mencione uma pessoa!",
-    "removePlayerToTeamMentionnedPlayerNotPlayer": "A pessoa mencionada não é um jogador registrado!",
+    "removePlayerToTeamMentionedPlayerNotPlayer": "A pessoa mencionada não é um jogador registrado!",
     "removePlayerToTeamNotInTheTeam": "Este jogador não está em um time.",
     "removePlayerToTeamDoneMessage": "%s foi excluído da equipe \"%s\"!",
     "showPlayerHelpMessage": "Mostre todos os jogadores com suas contas no servidor.",
@@ -120,8 +120,8 @@
     "statsProfileGraphTitleY": "Pontos de maestria",
     "cleanChannelOptionDisable": "Desativar",
     "cleanChannelOptionDisableDesc": "Desativar opção",
-    "cleanChannelOptionZoeCommands": "Excluir apenas comandos Zoe",
-    "cleanChannelOptionZoeCommandsDesc": "Isso excluirá todos os novos comandos zoe no canal",
+    "cleanChannelOptionYuumiCommands": "Excluir apenas comandos Yuumi",
+    "cleanChannelOptionYuumiCommandsDesc": "Isso excluirá todos os novos comandos yuumi no canal",
     "cleanChannelOptionAll": "Deletar todas as mensagens",
     "cleanChannelOptionAllDesc": "Isso excluirá todas as novas mensagens enviadas no canal",
     "cleanChannelOptionDesc": "Crie um canal de texto limpo onde as mensagens/comandos sejam excluídos automaticamente.",
@@ -132,12 +132,12 @@
     "cleanChannelOptionAlreadyDisable": "A opção já está desativada!",
     "cleanChannelOptionNowDisable": "OK ! A opção agora está desativada. Não vou mais excluir mensagens no canal limpo.",
     "cleanChannelOptionSendTextChannel": "Mais um passo e estamos bem! Agora, por favor **Envie uma mensagem com a menção do canal de texto que você deseja definir**",
-    "cleanChannelOptionTopicChannelZoeCommands": "Todos os comandos do Zoe enviados aqui serão excluídos após 3 segundos.",
+    "cleanChannelOptionTopicChannelYuumiCommands": "Todos os comandos do Yuumi enviados aqui serão excluídos após 3 segundos.",
     "cleanChannelOptionTopicChannelAll": "Todas as mensagens enviadas aqui serão excluídas após 3 segundos.",
     "cleanChannelOptionCreatedDoneMessage": "Perfeito! Eu criei um canal com o nome \"clean-channel\". Você pode alterar a opção deste canal como desejar. Apenas deixe minhas permissões lá dentro e tudo funcionará.",
-    "cleanChannelOptionInfoMessageZoeCommands": "Info: A partir de agora, os comandos de Zoe enviados aqui serão excluídos após 3 segundos.",
+    "cleanChannelOptionInfoMessageYuumiCommands": "Info: A partir de agora, os comandos de Yuumi enviados aqui serão excluídos após 3 segundos.",
     "cleanChannelOptionInfoMessageAll": "Informações: A partir de agora, todas as mensagens enviadas aqui serão excluídas após 3 segundos.",
-    "cleanChannelOptionSettedDoneMessage": "Perfeito! O canal foi configurado corretamente. Por favor, verifique se tenho todas as permissões necessárias dentro (Gerenciar Mensagens, Ler, Ler Histórico).",
+    "cleanChannelOptionSetDoneMessage": "Perfeito! O canal foi configurado corretamente. Por favor, verifique se tenho todas as permissões necessárias dentro (Gerenciar Mensagens, Ler, Ler Histórico).",
     "cleanChannelOptionSelectInfoChannel": "Você selecionou o canal de texto, é impossível configurar esta configuração. A configuração foi cancelada.",
     "cleanChannelOptionOneTextChannelRequired": "Você não mencionou um canal de texto. A configuração foi cancelada.",
     "cleanChannelOptionResponseTimeOut": "O tempo de espera de 2 minutos foi encerrado. Por favor, refaça o comando se desejar configurar esta opção.",
@@ -164,8 +164,8 @@
     "regionOptionSelectionCanceledMessage": "Seleção cancelada",
     "roleOptionDescription": "Ocultar o canal de texto para não-jogador com uma função",
     "roleOptionPermissionNeeded": "Preciso da permissão de gerenciamento de funções para ativar esta opção. Por favor, me dê essa permissão se você deseja ativar esta opção.",
-    "roleOptionLongDesc": "Opção de ativação: **%s**\n\nAtivar esta opção criará uma função chamada \"Zoe-Player\" e a atribuirá a todos os jogadores registrados. Você pode atualizá-lo como quiser. Se ele foi excluído, a opção será desativada automaticamente.\n\n:white_check_mark: : Ative esta opção\n:x: : cancela a ativação",
-    "roleOptionLongDescDisable": "Opção que você deseja desativar: **%s**\n\nDesativá-lo ** excluirá a função Zoe-Player ** e irá refazer o canal de texto legível por todos.\n\n:white_check_mark: : **Desativar** a opção.\n:x: : Cancela a desativação.",
+    "roleOptionLongDesc": "Opção de ativação: **%s**\n\nAtivar esta opção criará uma função chamada \"Yuumi-Player\" e a atribuirá a todos os jogadores registrados. Você pode atualizá-lo como quiser. Se ele foi excluído, a opção será desativada automaticamente.\n\n:white_check_mark: : Ative esta opção\n:x: : cancela a ativação",
+    "roleOptionLongDescDisable": "Opção que você deseja desativar: **%s**\n\nDesativá-lo ** excluirá a função Yuumi-Player ** e irá refazer o canal de texto legível por todos.\n\n:white_check_mark: : **Desativar** a opção.\n:x: : Cancela a desativação.",
     "roleOptionActivateWaitMessage": "Certo, vou ativar isso rapidamente. Aguarde 2 segundos ...",
     "roleOptionDoneMessage": "A configuração terminou! Agora, apenas um jogador registrado pode ver o canal de texto.",
     "roleOptionCancelMessage": "Bem, se você um dia você mudar de ideia. Você sabe onde eu estou.",
@@ -217,7 +217,7 @@
     "gameTypeUnknown": "Modo temporário",
     "blueTeam": "Time Azul",
     "redTeam": "Time Vermelho",
-    "masteriesWrTitleRespectSize": "Maestrias | WR deste mês",
+    "masteryWrTitleRespectSize": "Maestrias | WR deste mês",
     "soloqTitleRespectSize": "Rank da SoloQ",
     "infoCardsGameInfoTitle": "Info sobre o jogo de",
     "infoCardsGameFooter": "Duração atual do jogo",
@@ -250,7 +250,7 @@
     "2HoursAgo": "2 horas atrás",
     "1HourAgo": "1 horas atrás",
     "30MinutesAgo": "30 minutos atrás",
-    "fewsMinutesAgo": "alguns minutos atrás",
+    "fewMinutesAgo": "alguns minutos atrás",
     "infoCardsGameInfoOnTheGameOf": "Informações sobre o jogo de",
     "infoCardsGameInfoAndOf": "e de",
     "account": "Conta",
@@ -265,7 +265,7 @@
     "addingSystemRegionSelected": "Certo, você definiu a região \"%s\". Agora vou dar alguns conselhos sobre o meu uso:",
     "languageCommandInSelectionMenu": "Idioma selecionado : **%s**",
     "nameUseIllegalCharacter": "Você não pode usar esse nome! Você não pode usar caracteres de formatação.",
-    "languageCommandHelp": "Comando para selecionar o idioma de Zoe",
+    "languageCommandHelp": "Comando para selecionar o idioma de Yuumi",
     "errorSQLPleaseReport": "Eu tive um problema com o DataBase. Relate esse problema aqui: https://discord.gg/YZwBvAx",
     "addingSystemLanguageSelected": "Certo, agora vou falar %s. (Você sempre pode mudar meu idioma com o comando `>l`). Agora vamos selecionar uma região padrão para o servidor:",
     "addingSystemEndMessage": "A configuração básica agora está concluída. Espero que você goste dos meus serviços :D",
@@ -294,7 +294,7 @@
     "flex": "Flex",
     "rankChannelCorrectlyCreated": "O canal de classificação foi criado corretamente!",
     "deleteRankChannelDeletedMissingPermission": "O canal de texto foi excluído apenas **dentro do sistema**! Não tenho o direito de excluir o canal de texto!",
-    "deleteRankChannelNotSetted": "O canal de texto não está definido!",
+    "deleteRankChannelNotSet": "O canal de texto não está definido!",
     "deleteRankChannelHelpMessage": "Exclua o canal de texto. É necessário ter permissão para gerenciar canais.",
     "undefineRankChannelDoneMessage": "Eu deixei indefinido o canal de classificação!",
     "undefineRankChannelMissingChannel": "Não tenho canal de texto registrado! Não consigo definir algo que não existe: p",
@@ -304,7 +304,7 @@
     "defineRankChannelImpossibleToDefineCleanChannel": "Não consigo definir o rankChannel dentro do canal limpo (-> consulte a opção de configuração \"Clean Channel\").",
     "defineRankChannelHelpMessage": "Defina o canal de texto. É necessário ter permissão para gerenciar canais.",
     "deleteRankChannelDoneMessage": "O canal de texto foi excluído corretamente.",
-    "createRankChannelHelpMessage": "Crie um canal de Texto onde enviarei atualizações sobre a classificação dos jogadores registrados. É necessário liberar permissão ao Zoe para gerenciar canais.",
+    "createRankChannelHelpMessage": "Crie um canal de Texto onde enviarei atualizações sobre a classificação dos jogadores registrados. É necessário liberar permissão ao Yuumi para gerenciar canais.",
     "nativeActualLanguage": "#MESSAGE FOR TRANSLATOR: Don't tranlate that, put instead the name of your language in your language#Português/BR",
     "guildJoinHiAgain": "Olá de novo ! Toda a sua configuração foi salva desde a última vez que estive lá. Se você precisar lembrar como eu trabalho, tente os comandos `>setup` e`>help`. Se você deseja redefinir o servidor, execute o comando `>reset`.",
     "rankedAvg": "Ranked Média",
